--- a/q/10.html
+++ b/q/10.html
@@ -22,73 +22,73 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</h1>
                 <time>2024-07-01</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" />Buy Now  $:12.99 </a> <b class="btn btn-sm btn-c">S/N: A10</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A10 Buy Now  $:12.99</a> </p>
                <p>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576587845466.webp">
-                        <img src="/q/upload/other/20240628/1719576587845466.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576587845466.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576587845466.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576606814069.webp">
-                        <img src="/q/upload/other/20240628/1719576606814069.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576606814069.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576606814069.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576609289037.webp">
-                        <img src="/q/upload/other/20240628/1719576609289037.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576609289037.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576609289037.webp" alt="Flower"/></a>
                         <b>S/N: A10-1</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576631710830.webp">
-                        <img src="/q/upload/other/20240628/1719576631710830.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576631710830.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576631710830.webp" alt="Flower"/></a>
                         <b>S/N: A10-2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576633543829.webp">
-                        <img src="/q/upload/other/20240628/1719576633543829.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576633543829.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576633543829.webp" alt="Flower"/></a>
                         <b>S/N: A10-3</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576635103873.webp">
-                        <img src="/q/upload/other/20240628/1719576635103873.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576635103873.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576635103873.webp" alt="Flower"/></a>
                         <b>S/N: A10-4</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576645350825.webp">
-                        <img src="/q/upload/other/20240628/1719576645350825.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576645350825.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576645350825.webp" alt="Flower"/></a>
                         <b>S/N: A10-5</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576648212779.webp">
-                        <img src="/q/upload/other/20240628/1719576648212779.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576648212779.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576648212779.webp" alt="Flower"/></a>
                         <b>S/N: A10-6</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576652572016.webp">
-                        <img src="/q/upload/other/20240628/1719576652572016.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576652572016.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576652572016.webp" alt="Flower"/></a>
                         <b>S/N: A10-7</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576656575737.webp">
-                        <img src="/q/upload/other/20240628/1719576656575737.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576656575737.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576656575737.webp" alt="Flower"/></a>
                         <b>S/N: A10-8</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576659935990.webp">
-                        <img src="/q/upload/other/20240628/1719576659935990.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576659935990.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576659935990.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -97,7 +97,7 @@
             <p>Next: <a href="/q/11.html">Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
