--- a/q/11.html
+++ b/q/11.html
@@ -22,25 +22,25 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</h1>
                 <time>2024-06-10</time>
-				 <p><a class="btn btn-sm btn-b" href="https://www.paypal.com/ncp/payment/KED78AEWR8ZVA" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A11</b></p>
+				 <p><a href="https://www.paypal.com/ncp/payment/KED78AEWR8ZVA" target="_blank" class="btn btn-b smooth">  S/N: A11 Buy Now  $:9.99</a> </p>
                <p>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</p><p>size: 25cm * 12cm&nbsp;</p><p>gum : None, sewing is required&nbsp;</p><p>color : This white ，multi-colored</p><p>materail : polyester yarn</p><div>workmanship ：water-soluble embroidery</div><p><br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719389747296309.webp">
-                        <img src="/q/upload/other/20240626/1719389747296309.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719389747296309.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719389747296309.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240630/1719759910175716.webp">
-                        <img src="/q/upload/other/20240630/1719759910175716.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240630/1719759910175716.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240630/1719759910175716.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240630/1719759913915347.webp">
-                        <img src="/q/upload/other/20240630/1719759913915347.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240630/1719759913915347.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240630/1719759913915347.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -49,7 +49,7 @@
             <p>Next: <a href="/q/13.html">Embroidery flower bud lace flower applique</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
