--- a/q/14.html
+++ b/q/14.html
@@ -22,37 +22,37 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</h1>
                 <time>2024-07-01</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A14</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A14 Buy Now  $:29.99</a> </p>
                <p>Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719805685113949.webp">
-                        <img src="/q/upload/other/20240701/1719805685113949.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719805685113949.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719805685113949.webp" alt="Flower"/></a>
                         <b>Qipao Hanfu collar cloud shoulder</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719805749310038.webp">
-                        <img src="/q/upload/image/20240701/1719805749310038.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719805749310038.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719805749310038.webp" alt="Flower"/></a>
                         <b>Qipao Hanfu collar cloud shoulder</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719805749284150.webp">
-                        <img src="/q/upload/image/20240701/1719805749284150.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719805749284150.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719805749284150.webp" alt="Flower"/></a>
                         <b>Qipao Hanfu collar cloud shoulder</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719805749667374.webp">
-                        <img src="/q/upload/image/20240701/1719805749667374.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719805749667374.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719805749667374.webp" alt="Flower"/></a>
                         <b>Qipao Hanfu collar cloud shoulder</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719805749337888.webp">
-                        <img src="/q/upload/image/20240701/1719805749337888.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719805749337888.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719805749337888.webp" alt="Flower"/></a>
                         <b>Qipao Hanfu collar cloud shoulder</b>
                     </a>
                 </div> 
@@ -61,7 +61,7 @@
             <p>Next: <a href="/q/15.html">Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
