--- a/q/15.html
+++ b/q/15.html
@@ -22,67 +22,67 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery</h1>
                 <time>2024-06-30</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" />Buy Now  $:12.99 </a> <b class="btn btn-sm btn-c">S/N: A15</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A15 Buy Now  $:12.99</a> </p>
                
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576419722657.webp">
-                        <img src="/q/upload/other/20240628/1719576419722657.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576419722657.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576419722657.webp" alt="Flower"/></a>
                         <b>Embroidered</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576438728427.webp">
-                        <img src="/q/upload/other/20240628/1719576438728427.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576438728427.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576438728427.webp" alt="Flower"/></a>
                         <b>S/N: A15-1</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576442207382.webp">
-                        <img src="/q/upload/other/20240628/1719576442207382.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576442207382.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576442207382.webp" alt="Flower"/></a>
                         <b>S/N: A15-2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576444923678.webp">
-                        <img src="/q/upload/other/20240628/1719576444923678.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576444923678.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576444923678.webp" alt="Flower"/></a>
                         <b>S/N: A15-3</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576449511699.webp">
-                        <img src="/q/upload/other/20240628/1719576449511699.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576449511699.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576449511699.webp" alt="Flower"/></a>
                         <b>S/N: A15-4</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576451445348.webp">
-                        <img src="/q/upload/other/20240628/1719576451445348.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576451445348.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576451445348.webp" alt="Flower"/></a>
                         <b>S/N: A15-5</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576453759611.webp">
-                        <img src="/q/upload/other/20240628/1719576453759611.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576453759611.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576453759611.webp" alt="Flower"/></a>
                         <b>S/N: A15-6</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576456229242.webp">
-                        <img src="/q/upload/other/20240628/1719576456229242.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576456229242.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576456229242.webp" alt="Flower"/></a>
                         <b>S/N: A15-7</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576458303551.webp">
-                        <img src="/q/upload/other/20240628/1719576458303551.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576458303551.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576458303551.webp" alt="Flower"/></a>
                         <b>S/N: A15-8</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576461501692.webp">
-                        <img src="/q/upload/other/20240628/1719576461501692.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576461501692.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576461501692.webp" alt="Flower"/></a>
                         <b>S/N: A15-9</b>
                     </a>
                 </div> 
@@ -91,7 +91,7 @@
             <p>Next: <a href="/q/16.html">Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
