--- a/q/16.html
+++ b/q/16.html
@@ -22,25 +22,25 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set</h1>
                 <time>2024-07-01</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" />Buy Now  $:12.99 </a> <b class="btn btn-sm btn-c">S/N: A16</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A16 Buy Now  $:12.99</a> </p>
                
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576394952389.webp">
-                        <img src="/q/upload/other/20240628/1719576394952389.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576394952389.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576394952389.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576394952389.webp">
-                        <img src="/q/upload/other/20240628/1719576394952389.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576394952389.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576394952389.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576399734438.webp">
-                        <img src="/q/upload/other/20240628/1719576399734438.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576399734438.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576399734438.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -49,7 +49,7 @@
             <p>Next: <a href="/q/17.html">Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
