--- a/q/2.html
+++ b/q/2.html
@@ -22,91 +22,91 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers</h1>
                 <time>2024-07-01</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A2</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A2 Buy Now  $:9.99</a> </p>
                <p>Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers.</p><p>3D binding without adhesive backing.</p><p>Complete set (10 styles in total) $:59.99 &nbsp;<br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719821572670537.webp">
-                        <img src="/q/upload/other/20240701/1719821572670537.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719821572670537.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719821572670537.webp" alt="Flower"/></a>
                         <b>Embroidered lace three-dimensional fabric patch</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719821572678952.webp">
-                        <img src="/q/upload/other/20240701/1719821572678952.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719821572678952.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719821572678952.webp" alt="Flower"/></a>
                         <b>Embroidered lace three-dimensional fabric patch</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719821572589677.webp">
-                        <img src="/q/upload/other/20240701/1719821572589677.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719821572589677.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719821572589677.webp" alt="Flower"/></a>
                         <b>Embroidered lace three-dimensional fabric patch</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719821572352926.webp">
-                        <img src="/q/upload/other/20240701/1719821572352926.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719821572352926.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719821572352926.webp" alt="Flower"/></a>
                         <b>Embroidered lace three-dimensional fabric patch</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093171688.webp">
-                        <img src="/q/upload/other/20240701/1719822093171688.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093171688.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093171688.webp" alt="Flower"/></a>
                         <b>S/N: A2-1</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093465806.webp">
-                        <img src="/q/upload/other/20240701/1719822093465806.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093465806.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093465806.webp" alt="Flower"/></a>
                         <b>S/N: A2-2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093988766.webp">
-                        <img src="/q/upload/other/20240701/1719822093988766.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093988766.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093988766.webp" alt="Flower"/></a>
                         <b>S/N: A2-3</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093410832.webp">
-                        <img src="/q/upload/other/20240701/1719822093410832.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093410832.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093410832.webp" alt="Flower"/></a>
                         <b>S/N: A2-4</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093336534.webp">
-                        <img src="/q/upload/other/20240701/1719822093336534.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093336534.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093336534.webp" alt="Flower"/></a>
                         <b>S/N: A2-5</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093481303.webp">
-                        <img src="/q/upload/other/20240701/1719822093481303.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093481303.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093481303.webp" alt="Flower"/></a>
                         <b>S/N: A2-6</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093615901.webp">
-                        <img src="/q/upload/other/20240701/1719822093615901.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093615901.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093615901.webp" alt="Flower"/></a>
                         <b>S/N: A2-7</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093632159.webp">
-                        <img src="/q/upload/other/20240701/1719822093632159.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093632159.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093632159.webp" alt="Flower"/></a>
                         <b>S/N: A2-8</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093391741.webp">
-                        <img src="/q/upload/other/20240701/1719822093391741.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093391741.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093391741.webp" alt="Flower"/></a>
                         <b>S/N: A2-9</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093375977.webp">
-                        <img src="/q/upload/other/20240701/1719822093375977.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093375977.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093375977.webp" alt="Flower"/></a>
                         <b>S/N: A2-10</b>
                     </a>
                 </div> 
@@ -115,7 +115,7 @@
             <p>Next: <a href="/q/4.html">Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
