--- a/q/21.html
+++ b/q/21.html
@@ -22,31 +22,31 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Tiger head Embroiderye sticker</h1>
                 <time>2024-06-02</time>
-				 <p><a class="btn btn-sm btn-b" href="https://www.paypal.com/ncp/payment/6VZM27GTQTRNJ" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Tiger head Embroiderye sticker" />Buy Now  $:12 </a> <b class="btn btn-sm btn-c">S/N: A21</b></p>
+				 <p><a href="https://www.paypal.com/ncp/payment/6VZM27GTQTRNJ" target="_blank" class="btn btn-b smooth">  S/N: A21 Buy Now  $:12</a> </p>
                <p>Tiger head embroidery sticker<br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390626901068.webp">
-                        <img src="/q/upload/other/20240626/1719390626901068.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390626901068.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390626901068.webp" alt="Animal"/></a>
                         <b>Tiger head embroidery sticker</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390553546646.webp">
-                        <img src="/q/upload/other/20240626/1719390553546646.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390553546646.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390553546646.webp" alt="Animal"/></a>
                         <b>Tiger head embroidery sticker</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390553323341.webp">
-                        <img src="/q/upload/other/20240626/1719390553323341.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390553323341.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390553323341.webp" alt="Animal"/></a>
                         <b>Tiger head embroidery sticker</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390553865054.webp">
-                        <img src="/q/upload/other/20240626/1719390553865054.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390553865054.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390553865054.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -55,7 +55,7 @@
             <p>Next: <a href="/q/25.html">Cute cartoon puppy embroidered fabric patch for down jacket</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
