--- a/q/23.html
+++ b/q/23.html
@@ -22,43 +22,43 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</h1>
                 <time>2024-07-01</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A23</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A23 Buy Now  $:29.99</a> </p>
                <p>New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719826872695139.webp">
-                        <img src="/q/upload/other/20240701/1719826872695139.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719826872695139.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826872695139.webp" alt="Flower"/></a>
                         <b>S/N: A23</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719826879232022.webp">
-                        <img src="/q/upload/other/20240701/1719826879232022.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719826879232022.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826879232022.webp" alt="Flower"/></a>
                         <b>S/N: A23-1</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719826991399903.webp">
-                        <img src="/q/upload/other/20240701/1719826991399903.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719826991399903.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826991399903.webp" alt="Flower"/></a>
                         <b>S/N: A23-2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719826886827244.webp">
-                        <img src="/q/upload/other/20240701/1719826886827244.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719826886827244.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826886827244.webp" alt="Flower"/></a>
                         <b>S/N: A23-3</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719826879252999.webp">
-                        <img src="/q/upload/other/20240701/1719826879252999.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719826879252999.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826879252999.webp" alt="Flower"/></a>
                         <b>S/N: A23-4</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719826886481832.webp">
-                        <img src="/q/upload/other/20240701/1719826886481832.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719826886481832.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826886481832.webp" alt="Flower"/></a>
                         <b>S/N: A23-5</b>
                     </a>
                 </div> 
@@ -67,7 +67,7 @@
             <p>Next: <a href="/q/24.html">Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
