--- a/q/25.html
+++ b/q/25.html
@@ -22,49 +22,49 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cute cartoon puppy embroidered fabric patch for down jacket</h1>
                 <time>2024-07-05</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cute cartoon puppy embroidered fabric patch for down jacket" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A25</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A25 Buy Now  $:39.99</a> </p>
                <p>Cute cartoon puppy embroidered fabric patch for down jacket</p><p>Hot melt adhesive for cloth pasting</p><p>Complete set (17 styles in total) $:39.99</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240705/1720173696904058.webp">
-                        <img src="/q/upload/other/20240705/1720173696904058.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696904058.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696904058.webp" alt="Animal"/></a>
                         <b>Puppy cloth patch</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240705/1720173696207767.webp">
-                        <img src="/q/upload/other/20240705/1720173696207767.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696207767.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696207767.webp" alt="Animal"/></a>
                         <b>Puppy cloth patch</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240705/1720173696640056.webp">
-                        <img src="/q/upload/other/20240705/1720173696640056.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696640056.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696640056.webp" alt="Animal"/></a>
                         <b>Puppy cloth patch</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240705/1720173696199481.webp">
-                        <img src="/q/upload/other/20240705/1720173696199481.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696199481.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696199481.webp" alt="Animal"/></a>
                         <b>Puppy cloth patch</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240705/1720173696771036.webp">
-                        <img src="/q/upload/other/20240705/1720173696771036.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696771036.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696771036.webp" alt="Animal"/></a>
                         <b>Puppy cloth patch</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174019141747.webp">
-                        <img src="/q/upload/image/20240705/1720174019141747.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174019141747.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174019141747.webp" alt="Animal"/></a>
                         <b>Size in cm</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174025907665.webp">
-                        <img src="/q/upload/image/20240705/1720174025907665.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174025907665.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174025907665.webp" alt="Animal"/></a>
                         <b>Size in cm</b>
                     </a>
                 </div> 
@@ -73,7 +73,7 @@
             <p>Next: <a href="/q/26.html">New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
