--- a/q/27.html
+++ b/q/27.html
@@ -22,37 +22,37 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers</h1>
                 <time>2024-07-06</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A27</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A27 Buy Now  $:29.99</a> </p>
                <p>Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers</p><p>Animal Avatar Series (11 in total) $29.99</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720226343551632.webp">
-                        <img src="/q/upload/other/20240706/1720226343551632.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720226343551632.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720226343551632.webp" alt="Animal"/></a>
                         <b>Little Bear Cloth Patch</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720226343863372.webp">
-                        <img src="/q/upload/other/20240706/1720226343863372.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720226343863372.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720226343863372.webp" alt="Animal"/></a>
                         <b>Little Bear Cloth Patch</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720226343407543.webp">
-                        <img src="/q/upload/other/20240706/1720226343407543.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720226343407543.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720226343407543.webp" alt="Animal"/></a>
                         <b>Little Bear Cloth Patch</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720239540383451.webp">
-                        <img src="/q/upload/other/20240706/1720239540383451.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720239540383451.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720239540383451.webp" alt="Animal"/></a>
                         <b>Size in cm</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720239543276008.webp">
-                        <img src="/q/upload/other/20240706/1720239543276008.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720239543276008.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720239543276008.webp" alt="Animal"/></a>
                         <b>Size in cm</b>
                     </a>
                 </div> 
@@ -61,7 +61,7 @@
             <p>Next: <a href="/q/28.html">Cartoon Rabbit Astronaut</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
