--- a/q/28.html
+++ b/q/28.html
@@ -22,31 +22,31 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cartoon Rabbit Astronaut</h1>
                 <time>2024-07-06</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon Rabbit Astronaut" />Buy Now  $:12.99 </a> <b class="btn btn-sm btn-c">S/N: A28</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A28 Buy Now  $:12.99</a> </p>
                <p>Cartoon rabbit astronaut embroidered fabric patch cute self-adhesive clothing decoration patch patch</p><p>Complete set (6 styles in total) $:19.99</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720230548555036.webp">
-                        <img src="/q/upload/other/20240706/1720230548555036.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720230548555036.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720230548555036.webp" alt="Animal"/></a>
                         <b>Cartoon Rabbit Astronaut</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720230548650206.webp">
-                        <img src="/q/upload/other/20240706/1720230548650206.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720230548650206.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720230548650206.webp" alt="Animal"/></a>
                         <b>Cartoon Rabbit Astronaut</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720230548350602.webp">
-                        <img src="/q/upload/other/20240706/1720230548350602.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720230548350602.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720230548350602.webp" alt="Animal"/></a>
                         <b>Cartoon Rabbit Astronaut</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720230548301668.webp">
-                        <img src="/q/upload/other/20240706/1720230548301668.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720230548301668.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720230548301668.webp" alt="Animal"/></a>
                         <b>Size in cm</b>
                     </a>
                 </div> 
@@ -55,7 +55,7 @@
             <p>Next: <a href="/q/29.html">Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
