--- a/q/30.html
+++ b/q/30.html
@@ -22,37 +22,37 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cartoon Panda Cute Embroidered Cloth Sticker</h1>
                 <time>2024-07-06</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon Panda Cute Embroidered Cloth Sticker" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A30</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A30 Buy Now  $:9.99</a> </p>
                <p>Cartoon Panda Cute Embroidered Cloth Sticker</p><p>Computer Embroidery Seal DIY Bag Decoration Cloth Patch Patch</p><p>Complete set (6 styles in total) $:9.99&nbsp;<br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720249523715253.webp">
-                        <img src="/q/upload/other/20240706/1720249523715253.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523715253.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523715253.webp" alt="Animal"/></a>
                         <b>Cartoon Panda</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720249523509405.webp">
-                        <img src="/q/upload/other/20240706/1720249523509405.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523509405.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523509405.webp" alt="Animal"/></a>
                         <b>Cartoon Panda</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720249523525755.webp">
-                        <img src="/q/upload/other/20240706/1720249523525755.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523525755.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523525755.webp" alt="Animal"/></a>
                         <b>Cartoon Panda</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720249523976968.webp">
-                        <img src="/q/upload/other/20240706/1720249523976968.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523976968.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523976968.webp" alt="Animal"/></a>
                         <b>Cartoon Panda</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720249523695175.webp">
-                        <img src="/q/upload/other/20240706/1720249523695175.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523695175.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523695175.webp" alt="Animal"/></a>
                         <b>Cartoon Panda</b>
                     </a>
                 </div> 
@@ -61,7 +61,7 @@
             <p>Next: <a href="/q/31.html">Cute cartoon cat</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
