--- a/q/32.html
+++ b/q/32.html
@@ -22,97 +22,97 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cartoon flower butterfly embroidered fabric patch</h1>
                 <time>2024-07-06</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon flower butterfly embroidered fabric patch" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A32</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A32 Buy Now  $:29.99</a> </p>
                <p>Embroidered badges, cartoons, flowers, butterflies, embroidered fabrics, DIY bags, decorative stickers, clothing patches, wholesale stickers</p><p>Complete set (13 styles in total) $:29.99</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720251573246784.webp">
-                        <img src="/q/upload/other/20240706/1720251573246784.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720251573246784.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720251573246784.webp" alt="Animal"/></a>
                         <b>Cartoon flower embroidery</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720251573430017.webp">
-                        <img src="/q/upload/other/20240706/1720251573430017.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720251573430017.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720251573430017.webp" alt="Animal"/></a>
                         <b>Cartoon flower embroidery</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098807291.webp">
-                        <img src="/q/upload/other/20240706/1720253098807291.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098807291.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098807291.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098595863.webp">
-                        <img src="/q/upload/other/20240706/1720253098595863.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098595863.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098595863.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098412226.webp">
-                        <img src="/q/upload/other/20240706/1720253098412226.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098412226.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098412226.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098260947.webp">
-                        <img src="/q/upload/other/20240706/1720253098260947.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098260947.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098260947.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098429713.webp">
-                        <img src="/q/upload/other/20240706/1720253098429713.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098429713.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098429713.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098810086.webp">
-                        <img src="/q/upload/other/20240706/1720253098810086.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098810086.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098810086.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098484024.webp">
-                        <img src="/q/upload/other/20240706/1720253098484024.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098484024.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098484024.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098920560.webp">
-                        <img src="/q/upload/other/20240706/1720253098920560.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098920560.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098920560.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098734262.webp">
-                        <img src="/q/upload/other/20240706/1720253098734262.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098734262.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098734262.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098312937.webp">
-                        <img src="/q/upload/other/20240706/1720253098312937.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098312937.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098312937.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098483678.webp">
-                        <img src="/q/upload/other/20240706/1720253098483678.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098483678.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098483678.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098650775.webp">
-                        <img src="/q/upload/other/20240706/1720253098650775.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098650775.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098650775.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098391941.webp">
-                        <img src="/q/upload/other/20240706/1720253098391941.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098391941.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098391941.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -121,7 +121,7 @@
             <p>Next: <a href="/q/33.html">Cartoon animal embroidery</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
