--- a/q/33.html
+++ b/q/33.html
@@ -22,85 +22,85 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cartoon animal embroidery</h1>
                 <time>2024-07-06</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon animal embroidery" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A33</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A33 Buy Now  $:29.99</a> </p>
                <p>Cartoon animal embroidery fabric patch cute bag decoration clothing patch embroidery patch clothing accessories wholesale <br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258303241366.webp">
-                        <img src="/q/upload/other/20240706/1720258303241366.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258303241366.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258303241366.webp" alt="Animal"/></a>
                         <b>Cartoon animal embroidery</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258311558960.webp">
-                        <img src="/q/upload/other/20240706/1720258311558960.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258311558960.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258311558960.webp" alt="Animal"/></a>
                         <b>Cartoon animal embroidery</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258311589288.webp">
-                        <img src="/q/upload/other/20240706/1720258311589288.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258311589288.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258311589288.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258318678492.webp">
-                        <img src="/q/upload/other/20240706/1720258318678492.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258318678492.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258318678492.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258318412781.webp">
-                        <img src="/q/upload/other/20240706/1720258318412781.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258318412781.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258318412781.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258318646842.webp">
-                        <img src="/q/upload/other/20240706/1720258318646842.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258318646842.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258318646842.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258318567125.webp">
-                        <img src="/q/upload/other/20240706/1720258318567125.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258318567125.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258318567125.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258319951388.webp">
-                        <img src="/q/upload/other/20240706/1720258319951388.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258319951388.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319951388.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258319579289.webp">
-                        <img src="/q/upload/other/20240706/1720258319579289.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258319579289.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319579289.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258319543421.webp">
-                        <img src="/q/upload/other/20240706/1720258319543421.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258319543421.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319543421.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258319785740.webp">
-                        <img src="/q/upload/other/20240706/1720258319785740.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258319785740.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319785740.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258319368665.webp">
-                        <img src="/q/upload/other/20240706/1720258319368665.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258319368665.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319368665.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258319778786.webp">
-                        <img src="/q/upload/other/20240706/1720258319778786.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258319778786.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319778786.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -109,7 +109,7 @@
             <p>Next: <a href="/q/34.html">Ice cream cake embroidered cloth patch</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
