--- a/q/34.html
+++ b/q/34.html
@@ -22,79 +22,79 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Ice cream cake embroidered cloth patch</h1>
                 <time>2024-07-07</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Ice cream cake embroidered cloth patch" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A34</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A34 Buy Now  $:29.99</a> </p>
                <p>Ice cream cake embroidered fabric sticker self-adhesive clothing accessories candy sticker clothing patch sticker</p><p>Complete set (9 styles in total) $:29.99</p><p><br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944913432.webp">
-                        <img src="/u/upload/other/20240707/1720322944913432.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944913432.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944913432.webp" alt="Animal"/></a>
                         <b>Candy sticker</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944198665.webp">
-                        <img src="/u/upload/other/20240707/1720322944198665.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944198665.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944198665.webp" alt="Animal"/></a>
                         <b>Candy sticker</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944172906.webp">
-                        <img src="/u/upload/other/20240707/1720322944172906.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944172906.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944172906.webp" alt="Animal"/></a>
                         <b>Candy sticker</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944855786.webp">
-                        <img src="/u/upload/other/20240707/1720322944855786.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944855786.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944855786.webp" alt="Animal"/></a>
                         <b>lollipop</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944808655.webp">
-                        <img src="/u/upload/other/20240707/1720322944808655.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944808655.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944808655.webp" alt="Animal"/></a>
                         <b>popsicle</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944135251.webp">
-                        <img src="/u/upload/other/20240707/1720322944135251.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944135251.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944135251.webp" alt="Animal"/></a>
                         <b>candy</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944157423.webp">
-                        <img src="/u/upload/other/20240707/1720322944157423.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944157423.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944157423.webp" alt="Animal"/></a>
                         <b>ice cream</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944202224.webp">
-                        <img src="/u/upload/other/20240707/1720322944202224.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944202224.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944202224.webp" alt="Animal"/></a>
                         <b>croissant</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944531201.webp">
-                        <img src="/u/upload/other/20240707/1720322944531201.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944531201.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944531201.webp" alt="Animal"/></a>
                         <b>chocolate</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944963501.webp">
-                        <img src="/u/upload/other/20240707/1720322944963501.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944963501.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944963501.webp" alt="Animal"/></a>
                         <b>Strawberry Cake</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944765536.webp">
-                        <img src="/u/upload/other/20240707/1720322944765536.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944765536.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944765536.webp" alt="Animal"/></a>
                         <b>Cherry smoothie</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944611653.webp">
-                        <img src="/u/upload/other/20240707/1720322944611653.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944611653.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944611653.webp" alt="Animal"/></a>
                         <b>doughnut</b>
                     </a>
                 </div> 
@@ -103,7 +103,7 @@
             <p>Next: <a href="/q/35.html">Plush cartoon teddy bear cloth sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
