--- a/q/35.html
+++ b/q/35.html
@@ -22,79 +22,79 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Plush cartoon teddy bear cloth sticker</h1>
                 <time>2024-07-07</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Plush cartoon teddy bear cloth sticker" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A35</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A35 Buy Now  $:29.99</a> </p>
                <p>Embroidered plush cartoon teddy bear cloth sticker with self-adhesive embroidery sticker DIY bag decoration clothing patch sticker</p><p>Complete set (9 styles in total) $:29.99</p><p><br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895544840.webp">
-                        <img src="/u/upload/other/20240707/1720323895544840.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895544840.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895544840.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895510535.webp">
-                        <img src="/u/upload/other/20240707/1720323895510535.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895510535.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895510535.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895401536.webp">
-                        <img src="/u/upload/other/20240707/1720323895401536.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895401536.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895401536.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895621329.webp">
-                        <img src="/u/upload/other/20240707/1720323895621329.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895621329.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895621329.webp" alt="Animal"/></a>
                         <b>Kitty</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895702901.webp">
-                        <img src="/u/upload/other/20240707/1720323895702901.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895702901.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895702901.webp" alt="Animal"/></a>
                         <b>Kitty2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895435739.webp">
-                        <img src="/u/upload/other/20240707/1720323895435739.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895435739.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895435739.webp" alt="Animal"/></a>
                         <b>dog</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895653973.webp">
-                        <img src="/u/upload/other/20240707/1720323895653973.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895653973.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895653973.webp" alt="Animal"/></a>
                         <b>dog2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895737790.webp">
-                        <img src="/u/upload/other/20240707/1720323895737790.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895737790.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895737790.webp" alt="Animal"/></a>
                         <b>rabbit</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895360289.webp">
-                        <img src="/u/upload/other/20240707/1720323895360289.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895360289.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895360289.webp" alt="Animal"/></a>
                         <b>rabbit2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895130756.webp">
-                        <img src="/u/upload/other/20240707/1720323895130756.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895130756.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895130756.webp" alt="Animal"/></a>
                         <b>Little Bear</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895269691.webp">
-                        <img src="/u/upload/other/20240707/1720323895269691.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895269691.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895269691.webp" alt="Animal"/></a>
                         <b>Little Bear2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895678853.webp">
-                        <img src="/u/upload/other/20240707/1720323895678853.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895678853.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895678853.webp" alt="Animal"/></a>
                         <b>lamb</b>
                     </a>
                 </div> 
@@ -103,7 +103,7 @@
             <p>Next: <a href="/q/37.html">Cute little tiger embroidery patch</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
