--- a/q/36.html
+++ b/q/36.html
@@ -22,25 +22,25 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch</h1>
                 <time>2024-07-07</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A36</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A36 Buy Now  $:9.99</a> </p>
                <p>Embroidered small daisies, embroidered fabric stickers, cute self-adhesive stickers, DIY bags, decorative clothes, patch stickers wholesale <br/></p><p>Complete set (5 styles in total) $:9.99</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720334903694726.webp">
-                        <img src="/u/upload/other/20240707/1720334903694726.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720334903694726.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720334903694726.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720334903285845.webp">
-                        <img src="/u/upload/other/20240707/1720334903285845.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720334903285845.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720334903285845.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720334903934318.webp">
-                        <img src="/u/upload/other/20240707/1720334903934318.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720334903934318.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720334903934318.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -49,7 +49,7 @@
             <p>Next: <a href="/q/41.html">Embroidery Little Flowers</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
