--- a/q/4.html
+++ b/q/4.html
@@ -22,103 +22,103 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers</h1>
                 <time>2024-07-01</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers" />Buy Now  $:12.99 </a> <b class="btn btn-sm btn-c">S/N: A4</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A4 Buy Now  $:12.99</a> </p>
                <p>Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers</p><p>The bottom layer is made of fiberglass hot melt, and the three-dimensional petals are placed on a water soluble flower cart. There are a total of four layers of petals.</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719807328664852.webp">
-                        <img src="/q/upload/other/20240701/1719807328664852.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719807328664852.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719807328664852.webp" alt="Flower"/></a>
                         <b>Embroidered</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719818121414258.webp">
-                        <img src="/q/upload/other/20240701/1719818121414258.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719818121414258.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719818121414258.webp" alt="Flower"/></a>
                         <b>36cmX26cm</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719807328260114.webp">
-                        <img src="/q/upload/other/20240701/1719807328260114.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719807328260114.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719807328260114.webp" alt="Flower"/></a>
                         <b>S/N: A4-1</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719807328342949.webp">
-                        <img src="/q/upload/other/20240701/1719807328342949.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719807328342949.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719807328342949.webp" alt="Flower"/></a>
                         <b>S/N: A4-2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719817727687352.jpg">
-                        <img src="/q/upload/image/20240701/1719817727687352.jpg" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817727687352.jpg">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727687352.jpg" alt="Flower"/></a>
                         <b>S/N: A4-3</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719817727642251.jpg">
-                        <img src="/q/upload/image/20240701/1719817727642251.jpg" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817727642251.jpg">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727642251.jpg" alt="Flower"/></a>
                         <b>S/N: A4-4</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719817727359204.jpg">
-                        <img src="/q/upload/image/20240701/1719817727359204.jpg" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817727359204.jpg">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727359204.jpg" alt="Flower"/></a>
                         <b>S/N: A4-5</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719817727687279.jpg">
-                        <img src="/q/upload/image/20240701/1719817727687279.jpg" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817727687279.jpg">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727687279.jpg" alt="Flower"/></a>
                         <b>S/N: A4-6</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719817727627815.jpg">
-                        <img src="/q/upload/image/20240701/1719817727627815.jpg" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817727627815.jpg">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727627815.jpg" alt="Flower"/></a>
                         <b>S/N: A4-7</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719817728955752.jpg">
-                        <img src="/q/upload/image/20240701/1719817728955752.jpg" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728955752.jpg">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728955752.jpg" alt="Flower"/></a>
                         <b>S/N: A4-8</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719817728573899.jpg">
-                        <img src="/q/upload/image/20240701/1719817728573899.jpg" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728573899.jpg">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728573899.jpg" alt="Flower"/></a>
                         <b>S/N: A4-9</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719817728383000.jpg">
-                        <img src="/q/upload/image/20240701/1719817728383000.jpg" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728383000.jpg">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728383000.jpg" alt="Flower"/></a>
                         <b>S/N: A4-10</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719817728644731.jpg">
-                        <img src="/q/upload/image/20240701/1719817728644731.jpg" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728644731.jpg">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728644731.jpg" alt="Flower"/></a>
                         <b>S/N: A4-11</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719817728343246.jpg">
-                        <img src="/q/upload/image/20240701/1719817728343246.jpg" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728343246.jpg">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728343246.jpg" alt="Flower"/></a>
                         <b>S/N: A4-12</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719817728591180.jpg">
-                        <img src="/q/upload/image/20240701/1719817728591180.jpg" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728591180.jpg">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728591180.jpg" alt="Flower"/></a>
                         <b>S/N: A4-13</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719817728652548.jpg">
-                        <img src="/q/upload/image/20240701/1719817728652548.jpg" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728652548.jpg">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728652548.jpg" alt="Flower"/></a>
                         <b>S/N: A4-14</b>
                     </a>
                 </div> 
@@ -127,7 +127,7 @@
             <p>Next: <a href="/q/8.html">Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
