--- a/q/48.html
+++ b/q/48.html
@@ -22,109 +22,109 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cartoon Cubs Embroidered Cloth Sticker</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon Cubs Embroidered Cloth Sticker" />Buy Now  $:49.99 </a> <b class="btn btn-sm btn-c">S/N: A48</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A48 Buy Now  $:49.99</a> </p>
                <p>Cartoon Cubs embroidered cloth affixed garment decoration epaulettes</p><p>Complete set (16 styles in total) $:49.99</p><p>Large Complete set (8 styles in total) $:29.99<br/></p><p>Trumpet Complete set (8 styles in total) $:19.99<br/></p><p><br/></p><p>可熨 可烫： Can be ironed&nbsp;</p><p>尺寸 7.5*9.0厘米: &nbsp;Size 7.5cm*9.0cm</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100161777517.webp">
-                        <img src="/u/upload/other/20240716/1721100161777517.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100161777517.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100161777517.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168310826.webp">
-                        <img src="/u/upload/other/20240716/1721100168310826.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168310826.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168310826.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168783729.webp">
-                        <img src="/u/upload/other/20240716/1721100168783729.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168783729.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168783729.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168284668.webp">
-                        <img src="/u/upload/other/20240716/1721100168284668.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168284668.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168284668.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168970169.webp">
-                        <img src="/u/upload/other/20240716/1721100168970169.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168970169.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168970169.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168319031.webp">
-                        <img src="/u/upload/other/20240716/1721100168319031.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168319031.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168319031.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168473589.webp">
-                        <img src="/u/upload/other/20240716/1721100168473589.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168473589.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168473589.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168945267.webp">
-                        <img src="/u/upload/other/20240716/1721100168945267.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168945267.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168945267.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168979130.webp">
-                        <img src="/u/upload/other/20240716/1721100168979130.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168979130.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168979130.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168909597.webp">
-                        <img src="/u/upload/other/20240716/1721100168909597.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168909597.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168909597.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168805377.webp">
-                        <img src="/u/upload/other/20240716/1721100168805377.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168805377.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168805377.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168974314.webp">
-                        <img src="/u/upload/other/20240716/1721100168974314.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168974314.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168974314.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168803534.webp">
-                        <img src="/u/upload/other/20240716/1721100168803534.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168803534.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168803534.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168700579.webp">
-                        <img src="/u/upload/other/20240716/1721100168700579.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168700579.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168700579.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168623250.webp">
-                        <img src="/u/upload/other/20240716/1721100168623250.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168623250.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168623250.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168529621.webp">
-                        <img src="/u/upload/other/20240716/1721100168529621.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168529621.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168529621.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168571408.webp">
-                        <img src="/u/upload/other/20240716/1721100168571408.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168571408.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168571408.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -133,7 +133,7 @@
             <p>Next: <a href="/q/49.html">Cartoon shoes embroidered cloth sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
