--- a/q/49.html
+++ b/q/49.html
@@ -22,55 +22,55 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cartoon shoes embroidered cloth sticker</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon shoes embroidered cloth sticker" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A49</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A49 Buy Now  $:29.99</a> </p>
                <p>Cartoon Shoes Embroidery Cloth Sticker Fashion Embroidery Glue Patch Patch Small Size Patch</p><p>Complete set (7 styles in total) $:29.99</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101274358039.webp">
-                        <img src="/u/upload/other/20240716/1721101274358039.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101274358039.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101274358039.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101279464982.webp">
-                        <img src="/u/upload/other/20240716/1721101279464982.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101279464982.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101279464982.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101279630128.webp">
-                        <img src="/u/upload/other/20240716/1721101279630128.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101279630128.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101279630128.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101279809954.webp">
-                        <img src="/u/upload/other/20240716/1721101279809954.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101279809954.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101279809954.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101279423513.webp">
-                        <img src="/u/upload/other/20240716/1721101279423513.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101279423513.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101279423513.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101279760894.webp">
-                        <img src="/u/upload/other/20240716/1721101279760894.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101279760894.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101279760894.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101279716276.webp">
-                        <img src="/u/upload/other/20240716/1721101279716276.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101279716276.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101279716276.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101279702601.webp">
-                        <img src="/u/upload/other/20240716/1721101279702601.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101279702601.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101279702601.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -79,7 +79,7 @@
             <p>Next: <a href="/q/50.html">Embroidery cloth paste wholesale</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
