--- a/q/52.html
+++ b/q/52.html
@@ -22,127 +22,127 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Sailboat series embroidery cloth stickers</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Sailboat series embroidery cloth stickers" />Buy Now  $:69.99 </a> <b class="btn btn-sm btn-c">S/N: A52</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A52 Buy Now  $:69.99</a> </p>
                <p>Sailing Series Badge Back Adhesive Patch Cap Badge Shoe Hat Accessories Embroidery Cloth Sticker</p><p>Complete set (19 styles in total) $:69.99 &nbsp; <br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114589862107.webp">
-                        <img src="/u/upload/other/20240716/1721114589862107.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114589862107.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114589862107.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596816905.webp">
-                        <img src="/u/upload/other/20240716/1721114596816905.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596816905.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596816905.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596921585.webp">
-                        <img src="/u/upload/other/20240716/1721114596921585.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596921585.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596921585.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596943079.webp">
-                        <img src="/u/upload/other/20240716/1721114596943079.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596943079.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596943079.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596379696.webp">
-                        <img src="/u/upload/other/20240716/1721114596379696.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596379696.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596379696.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596729775.webp">
-                        <img src="/u/upload/other/20240716/1721114596729775.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596729775.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596729775.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596250219.webp">
-                        <img src="/u/upload/other/20240716/1721114596250219.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596250219.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596250219.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596714850.webp">
-                        <img src="/u/upload/other/20240716/1721114596714850.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596714850.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596714850.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596126307.webp">
-                        <img src="/u/upload/other/20240716/1721114596126307.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596126307.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596126307.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596853851.webp">
-                        <img src="/u/upload/other/20240716/1721114596853851.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596853851.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596853851.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596760167.webp">
-                        <img src="/u/upload/other/20240716/1721114596760167.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596760167.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596760167.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596963314.webp">
-                        <img src="/u/upload/other/20240716/1721114596963314.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596963314.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596963314.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596491409.webp">
-                        <img src="/u/upload/other/20240716/1721114596491409.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596491409.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596491409.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596176255.webp">
-                        <img src="/u/upload/other/20240716/1721114596176255.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596176255.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596176255.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596149295.webp">
-                        <img src="/u/upload/other/20240716/1721114596149295.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596149295.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596149295.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596781114.webp">
-                        <img src="/u/upload/other/20240716/1721114596781114.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596781114.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596781114.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596580369.webp">
-                        <img src="/u/upload/other/20240716/1721114596580369.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596580369.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596580369.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596919826.webp">
-                        <img src="/u/upload/other/20240716/1721114596919826.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596919826.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596919826.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596803923.webp">
-                        <img src="/u/upload/other/20240716/1721114596803923.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596803923.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596803923.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596757716.webp">
-                        <img src="/u/upload/other/20240716/1721114596757716.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114596757716.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114596757716.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -151,7 +151,7 @@
             <p>Next: <a href="/q/53.html">Leaf embroidery cloth sticker can be ironed hand stitch patch</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
