--- a/q/59.html
+++ b/q/59.html
@@ -22,157 +22,157 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A59</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A59 Buy Now  $:29.99</a> </p>
                <p>Multi-coloured small flowers embroidered cartoon cloth affixed children&#39;s clothes decoration patches patches decoration.</p><p>Complete set (22 styles in total) $:29.99<br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121011841362.webp">
-                        <img src="/u/upload/other/20240716/1721121011841362.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121011841362.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121011841362.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018462905.webp">
-                        <img src="/u/upload/other/20240716/1721121018462905.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018462905.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018462905.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018641511.webp">
-                        <img src="/u/upload/other/20240716/1721121018641511.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018641511.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018641511.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018560727.webp">
-                        <img src="/u/upload/other/20240716/1721121018560727.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018560727.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018560727.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018511377.webp">
-                        <img src="/u/upload/other/20240716/1721121018511377.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018511377.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018511377.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018902048.webp">
-                        <img src="/u/upload/other/20240716/1721121018902048.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018902048.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018902048.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018941223.webp">
-                        <img src="/u/upload/other/20240716/1721121018941223.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018941223.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018941223.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018920516.webp">
-                        <img src="/u/upload/other/20240716/1721121018920516.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018920516.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018920516.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018796233.webp">
-                        <img src="/u/upload/other/20240716/1721121018796233.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018796233.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018796233.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018349206.webp">
-                        <img src="/u/upload/other/20240716/1721121018349206.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018349206.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018349206.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018454169.webp">
-                        <img src="/u/upload/other/20240716/1721121018454169.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018454169.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018454169.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018937839.webp">
-                        <img src="/u/upload/other/20240716/1721121018937839.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018937839.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018937839.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018559147.webp">
-                        <img src="/u/upload/other/20240716/1721121018559147.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018559147.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018559147.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018983925.webp">
-                        <img src="/u/upload/other/20240716/1721121018983925.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018983925.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018983925.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018358711.webp">
-                        <img src="/u/upload/other/20240716/1721121018358711.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018358711.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018358711.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018330502.webp">
-                        <img src="/u/upload/other/20240716/1721121018330502.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018330502.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018330502.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018852862.webp">
-                        <img src="/u/upload/other/20240716/1721121018852862.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018852862.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018852862.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018993709.webp">
-                        <img src="/u/upload/other/20240716/1721121018993709.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018993709.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018993709.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018992447.webp">
-                        <img src="/u/upload/other/20240716/1721121018992447.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018992447.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018992447.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018854266.webp">
-                        <img src="/u/upload/other/20240716/1721121018854266.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018854266.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018854266.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018855644.webp">
-                        <img src="/u/upload/other/20240716/1721121018855644.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018855644.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018855644.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018291534.webp">
-                        <img src="/u/upload/other/20240716/1721121018291534.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018291534.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018291534.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018987902.webp">
-                        <img src="/u/upload/other/20240716/1721121018987902.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018987902.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018987902.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018114684.webp">
-                        <img src="/u/upload/other/20240716/1721121018114684.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018114684.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018114684.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018764769.webp">
-                        <img src="/u/upload/other/20240716/1721121018764769.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018764769.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018764769.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -181,7 +181,7 @@
             <p>Next: <a href="/q/60.html">Multicoloured flowers embroidery patch decoration</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
