--- a/q/60.html
+++ b/q/60.html
@@ -22,67 +22,67 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Multicoloured flowers embroidery patch decoration</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Multicoloured flowers embroidery patch decoration" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A60</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A60 Buy Now  $:29.99</a> </p>
                <p>Multi-coloured flower cloth embroidery patch decoration decoration.</p><p>Complete set (9 styles in total) $:29.99</p><p>Size: wide 6.5cm&nbsp; high 5.7cm</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121733544994.webp">
-                        <img src="/u/upload/other/20240716/1721121733544994.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121733544994.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121733544994.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121737822542.webp">
-                        <img src="/u/upload/other/20240716/1721121737822542.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737822542.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737822542.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121737117669.webp">
-                        <img src="/u/upload/other/20240716/1721121737117669.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737117669.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737117669.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121737848084.webp">
-                        <img src="/u/upload/other/20240716/1721121737848084.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737848084.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737848084.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121737330989.webp">
-                        <img src="/u/upload/other/20240716/1721121737330989.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737330989.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737330989.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121737297794.webp">
-                        <img src="/u/upload/other/20240716/1721121737297794.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737297794.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737297794.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121737941263.webp">
-                        <img src="/u/upload/other/20240716/1721121737941263.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737941263.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737941263.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121737372991.webp">
-                        <img src="/u/upload/other/20240716/1721121737372991.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737372991.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737372991.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121737353713.webp">
-                        <img src="/u/upload/other/20240716/1721121737353713.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737353713.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737353713.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121737686513.webp">
-                        <img src="/u/upload/other/20240716/1721121737686513.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737686513.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737686513.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -91,7 +91,7 @@
             <p>Next: <a href="javascript:;"> </a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
