--- a/q/63.html
+++ b/q/63.html
@@ -22,97 +22,97 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Embroidered round coaster</h1>
                 <time>2024-07-17</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered round coaster" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A63</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A63 Buy Now  $:9.99</a> </p>
                <p>Chinese Style Embroidery Coaster Embroidery Technology Overseas Gift Tea Coaster Bowl Mat Insulation Mat</p><p>Diameter：13cm</p><p>Complete set (13 styles in total) $:69.99 <br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198850843830.webp">
-                        <img src="/u/upload/other/20240717/1721198850843830.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198850843830.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198850843830.webp" alt="Animal"/></a>
                         <b>S/N: A63</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858241612.webp">
-                        <img src="/u/upload/other/20240717/1721198858241612.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858241612.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858241612.webp" alt="Animal"/></a>
                         <b>S/N: A63-1</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858330911.webp">
-                        <img src="/u/upload/other/20240717/1721198858330911.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858330911.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858330911.webp" alt="Animal"/></a>
                         <b>S/N: A63-2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858209438.webp">
-                        <img src="/u/upload/other/20240717/1721198858209438.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858209438.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858209438.webp" alt="Animal"/></a>
                         <b>S/N: A63-3</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858994610.webp">
-                        <img src="/u/upload/other/20240717/1721198858994610.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858994610.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858994610.webp" alt="Animal"/></a>
                         <b>S/N: A63-4</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858615729.webp">
-                        <img src="/u/upload/other/20240717/1721198858615729.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858615729.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858615729.webp" alt="Animal"/></a>
                         <b>S/N: A63-5</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858583005.webp">
-                        <img src="/u/upload/other/20240717/1721198858583005.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858583005.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858583005.webp" alt="Animal"/></a>
                         <b>S/N: A63-6</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858952679.webp">
-                        <img src="/u/upload/other/20240717/1721198858952679.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858952679.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858952679.webp" alt="Animal"/></a>
                         <b>S/N: A63-7</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858650130.webp">
-                        <img src="/u/upload/other/20240717/1721198858650130.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858650130.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858650130.webp" alt="Animal"/></a>
                         <b>S/N: A63-8</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858986535.webp">
-                        <img src="/u/upload/other/20240717/1721198858986535.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858986535.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858986535.webp" alt="Animal"/></a>
                         <b>S/N: A63-9</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858568514.webp">
-                        <img src="/u/upload/other/20240717/1721198858568514.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858568514.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858568514.webp" alt="Animal"/></a>
                         <b>S/N: A63-10</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858879726.webp">
-                        <img src="/u/upload/other/20240717/1721198858879726.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858879726.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858879726.webp" alt="Animal"/></a>
                         <b>S/N: A63-11</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858504517.webp">
-                        <img src="/u/upload/other/20240717/1721198858504517.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858504517.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858504517.webp" alt="Animal"/></a>
                         <b>S/N: A63-12</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858751208.webp">
-                        <img src="/u/upload/other/20240717/1721198858751208.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858751208.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858751208.webp" alt="Animal"/></a>
                         <b>S/N: A63-13</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198862518183.webp">
-                        <img src="/u/upload/other/20240717/1721198862518183.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198862518183.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198862518183.webp" alt="Animal"/></a>
                         <b>back</b>
                     </a>
                 </div> 
@@ -121,7 +121,7 @@
             <p>Next: <a href="/q/64.html">Mid-Autumn Element Rabbit Embroidery Cloth Stic</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
