--- a/q/65.html
+++ b/q/65.html
@@ -22,79 +22,79 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cute cartoon panda cloth sticker</h1>
                 <time>2024-07-17</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cute cartoon panda cloth sticker" />Buy Now  $:19.99 </a> <b class="btn btn-sm btn-c">S/N: A65</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A65 Buy Now  $:19.99</a> </p>
                <p>New Cute Cartoon Panda Cloth Patch Jacket Repair Subsidy</p><p>Complete set (4 styles in total) $:19.99 <br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721201167907307.webp">
-                        <img src="/u/upload/other/20240717/1721201167907307.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201167907307.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201167907307.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721201173405582.webp">
-                        <img src="/u/upload/other/20240717/1721201173405582.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173405582.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173405582.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721201173513325.webp">
-                        <img src="/u/upload/other/20240717/1721201173513325.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173513325.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173513325.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721201173584185.webp">
-                        <img src="/u/upload/other/20240717/1721201173584185.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173584185.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173584185.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721201173453576.webp">
-                        <img src="/u/upload/other/20240717/1721201173453576.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173453576.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173453576.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721201173817615.webp">
-                        <img src="/u/upload/other/20240717/1721201173817615.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173817615.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173817615.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721201173843857.webp">
-                        <img src="/u/upload/other/20240717/1721201173843857.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173843857.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173843857.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721201173547486.webp">
-                        <img src="/u/upload/other/20240717/1721201173547486.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173547486.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173547486.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721201173623509.webp">
-                        <img src="/u/upload/other/20240717/1721201173623509.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173623509.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173623509.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721201173536598.webp">
-                        <img src="/u/upload/other/20240717/1721201173536598.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173536598.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173536598.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721201173497373.webp">
-                        <img src="/u/upload/other/20240717/1721201173497373.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173497373.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173497373.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721201173718938.webp">
-                        <img src="/u/upload/other/20240717/1721201173718938.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173718938.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173718938.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -103,7 +103,7 @@
             <p>Next: <a href="/q/66.html">Cute trumpet embroidery cloth sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
