--- a/q/66.html
+++ b/q/66.html
@@ -22,157 +22,157 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cute trumpet embroidery cloth sticker</h1>
                 <time>2024-07-17</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cute trumpet embroidery cloth sticker" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A66</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A66 Buy Now  $:39.99</a> </p>
                <p>Cute trumpet embroidered fan sack DIY decorative paste spring cloth sticker.</p><p>Complete set (20 styles in total) $:39.99 &nbsp;<br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203789985801.webp">
-                        <img src="/u/upload/other/20240717/1721203789985801.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203789985801.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789985801.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203789718753.webp">
-                        <img src="/u/upload/other/20240717/1721203789718753.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203789718753.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789718753.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203789894025.webp">
-                        <img src="/u/upload/other/20240717/1721203789894025.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203789894025.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789894025.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203789322421.webp">
-                        <img src="/u/upload/other/20240717/1721203789322421.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203789322421.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789322421.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203789891753.webp">
-                        <img src="/u/upload/other/20240717/1721203789891753.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203789891753.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789891753.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803784935.webp">
-                        <img src="/u/upload/other/20240717/1721203803784935.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803784935.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803784935.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803115860.webp">
-                        <img src="/u/upload/other/20240717/1721203803115860.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803115860.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803115860.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803359005.webp">
-                        <img src="/u/upload/other/20240717/1721203803359005.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803359005.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803359005.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803364026.webp">
-                        <img src="/u/upload/other/20240717/1721203803364026.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803364026.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803364026.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803413267.webp">
-                        <img src="/u/upload/other/20240717/1721203803413267.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803413267.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803413267.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803142930.webp">
-                        <img src="/u/upload/other/20240717/1721203803142930.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803142930.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803142930.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803488132.webp">
-                        <img src="/u/upload/other/20240717/1721203803488132.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803488132.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803488132.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803612845.webp">
-                        <img src="/u/upload/other/20240717/1721203803612845.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803612845.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803612845.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803878266.webp">
-                        <img src="/u/upload/other/20240717/1721203803878266.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803878266.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803878266.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803423571.webp">
-                        <img src="/u/upload/other/20240717/1721203803423571.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803423571.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803423571.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803557550.webp">
-                        <img src="/u/upload/other/20240717/1721203803557550.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803557550.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803557550.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803901175.webp">
-                        <img src="/u/upload/other/20240717/1721203803901175.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803901175.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803901175.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803169755.webp">
-                        <img src="/u/upload/other/20240717/1721203803169755.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803169755.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803169755.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803604193.webp">
-                        <img src="/u/upload/other/20240717/1721203803604193.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803604193.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803604193.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803212541.webp">
-                        <img src="/u/upload/other/20240717/1721203803212541.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803212541.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803212541.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803439777.webp">
-                        <img src="/u/upload/other/20240717/1721203803439777.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803439777.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803439777.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803990762.webp">
-                        <img src="/u/upload/other/20240717/1721203803990762.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803990762.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803990762.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803416617.webp">
-                        <img src="/u/upload/other/20240717/1721203803416617.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803416617.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803416617.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803899214.webp">
-                        <img src="/u/upload/other/20240717/1721203803899214.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803899214.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803899214.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721203803632791.webp">
-                        <img src="/u/upload/other/20240717/1721203803632791.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803632791.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803632791.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -181,7 +181,7 @@
             <p>Next: <a href="/q/67.html">Cute Flowers Butterfly Embroidery Cloth Sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
