--- a/q/68.html
+++ b/q/68.html
@@ -22,157 +22,157 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Planet Cartoon Astronaut Embroidered Cloth Sticker</h1>
                 <time>2024-07-18</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Planet Cartoon Astronaut Embroidered Cloth Sticker" />Buy Now  $:69.99 </a> <b class="btn btn-sm btn-c">S/N: A68</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A68 Buy Now  $:69.99</a> </p>
                <p>Embroidery Planet Cartoon Astronaut Embroidery Cloth Sticky DIY Package Packaging Garment Patch Patch Wholesale.</p><p>Complete set (18 styles in total) $:69.99<br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365990313.webp">
-                        <img src="/u/upload/other/20240718/1721267365990313.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365990313.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365990313.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365981023.webp">
-                        <img src="/u/upload/other/20240718/1721267365981023.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365981023.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365981023.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365801204.webp">
-                        <img src="/u/upload/other/20240718/1721267365801204.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365801204.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365801204.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365846495.webp">
-                        <img src="/u/upload/other/20240718/1721267365846495.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365846495.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365846495.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365105958.webp">
-                        <img src="/u/upload/other/20240718/1721267365105958.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365105958.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365105958.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365325140.webp">
-                        <img src="/u/upload/other/20240718/1721267365325140.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365325140.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365325140.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365418638.webp">
-                        <img src="/u/upload/other/20240718/1721267365418638.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365418638.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365418638.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392570473.webp">
-                        <img src="/u/upload/other/20240718/1721267392570473.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392570473.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392570473.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392695082.webp">
-                        <img src="/u/upload/other/20240718/1721267392695082.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392695082.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392695082.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392666494.webp">
-                        <img src="/u/upload/other/20240718/1721267392666494.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392666494.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392666494.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392155508.webp">
-                        <img src="/u/upload/other/20240718/1721267392155508.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392155508.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392155508.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392468068.webp">
-                        <img src="/u/upload/other/20240718/1721267392468068.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392468068.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392468068.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392541207.webp">
-                        <img src="/u/upload/other/20240718/1721267392541207.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392541207.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392541207.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392600810.webp">
-                        <img src="/u/upload/other/20240718/1721267392600810.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392600810.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392600810.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392951930.webp">
-                        <img src="/u/upload/other/20240718/1721267392951930.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392951930.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392951930.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392444409.webp">
-                        <img src="/u/upload/other/20240718/1721267392444409.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392444409.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392444409.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392493701.webp">
-                        <img src="/u/upload/other/20240718/1721267392493701.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392493701.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392493701.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392511867.webp">
-                        <img src="/u/upload/other/20240718/1721267392511867.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392511867.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392511867.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392285604.webp">
-                        <img src="/u/upload/other/20240718/1721267392285604.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392285604.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392285604.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392638452.webp">
-                        <img src="/u/upload/other/20240718/1721267392638452.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392638452.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392638452.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392428916.webp">
-                        <img src="/u/upload/other/20240718/1721267392428916.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392428916.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392428916.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392637145.webp">
-                        <img src="/u/upload/other/20240718/1721267392637145.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392637145.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392637145.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392824553.webp">
-                        <img src="/u/upload/other/20240718/1721267392824553.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392824553.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392824553.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392339274.webp">
-                        <img src="/u/upload/other/20240718/1721267392339274.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392339274.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392339274.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392634175.webp">
-                        <img src="/u/upload/other/20240718/1721267392634175.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392634175.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392634175.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -181,7 +181,7 @@
             <p>Next: <a href="/q/69.html">Embroidery bear cartoon animal embroidery cloth sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
