--- a/q/animal/index.html
+++ b/q/animal/index.html
@@ -28,55 +28,55 @@
             <div class="row">
                 <div class="col c4">
                     <a href="/q/70.html" title="Bear Head Cartoon Animal Cloth Sticker,2024-07-18 11:41:43" class="btn btn-a" >
-                        <img src="/u/upload/other/20240718/1721274578954710.webp" alt="Bear Head Cartoon Animal Cloth Sticker,2024-07-18 11:41:43">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274578954710.webp" alt="Bear Head Cartoon Animal Cloth Sticker,2024-07-18 11:41:43">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/69.html" title="Embroidery bear cartoon animal embroidery cloth sticker,2024-07-18 11:13:23" class="btn btn-a" >
-                        <img src="/u/upload/other/20240718/1721272517666786.webp" alt="Embroidery bear cartoon animal embroidery cloth sticker,2024-07-18 11:13:23">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272517666786.webp" alt="Embroidery bear cartoon animal embroidery cloth sticker,2024-07-18 11:13:23">
                         <b>$:19.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/68.html" title="Planet Cartoon Astronaut Embroidered Cloth Sticker,2024-07-18 09:46:16" class="btn btn-a" >
-                        <img src="/u/upload/other/20240718/1721267353962092.webp" alt="Planet Cartoon Astronaut Embroidered Cloth Sticker,2024-07-18 09:46:16">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267353962092.webp" alt="Planet Cartoon Astronaut Embroidered Cloth Sticker,2024-07-18 09:46:16">
                         <b>$:69.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/67.html" title="Cute Flowers Butterfly Embroidery Cloth Sticker,2024-07-17 17:19:14" class="btn btn-a" >
-                        <img src="/u/upload/other/20240717/1721208094759756.webp" alt="Cute Flowers Butterfly Embroidery Cloth Sticker,2024-07-17 17:19:14">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208094759756.webp" alt="Cute Flowers Butterfly Embroidery Cloth Sticker,2024-07-17 17:19:14">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/66.html" title="Cute trumpet embroidery cloth sticker,2024-07-17 15:26:26" class="btn btn-a" >
-                        <img src="/u/upload/other/20240717/1721203780139162.webp" alt="Cute trumpet embroidery cloth sticker,2024-07-17 15:26:26">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203780139162.webp" alt="Cute trumpet embroidery cloth sticker,2024-07-17 15:26:26">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/65.html" title="Cute cartoon panda cloth sticker,2024-07-17 15:24:02" class="btn btn-a" >
-                        <img src="/u/upload/other/20240717/1721201164313182.webp" alt="Cute cartoon panda cloth sticker,2024-07-17 15:24:02">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201164313182.webp" alt="Cute cartoon panda cloth sticker,2024-07-17 15:24:02">
                         <b>$:19.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/64.html" title="Mid-Autumn Element Rabbit Embroidery Cloth Stic,2024-07-17 14:52:29" class="btn btn-a" >
-                        <img src="/u/upload/other/20240717/1721200181342114.webp" alt="Mid-Autumn Element Rabbit Embroidery Cloth Stic,2024-07-17 14:52:29">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200181342114.webp" alt="Mid-Autumn Element Rabbit Embroidery Cloth Stic,2024-07-17 14:52:29">
                         <b>$:19.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/63.html" title="Embroidered round coaster,2024-07-17 14:38:50" class="btn btn-a" >
-                        <img src="/u/upload/other/20240717/1721198840144145.webp" alt="Embroidered round coaster,2024-07-17 14:38:50">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198840144145.webp" alt="Embroidered round coaster,2024-07-17 14:38:50">
                         <b>$:9.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/62.html" title="Five Star Embroidery Cloth Sticker,2024-07-17 11:36:49" class="btn btn-a" >
-                        <img src="/u/upload/other/20240717/1721187660915596.webp" alt="Five Star Embroidery Cloth Sticker,2024-07-17 11:36:49">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187660915596.webp" alt="Five Star Embroidery Cloth Sticker,2024-07-17 11:36:49">
                         <b>$:39.99</b>
                     </a>
                 </div><br />
@@ -84,7 +84,7 @@
             </div>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
