--- a/q/animal_3/index.html
+++ b/q/animal_3/index.html
@@ -28,55 +28,55 @@
             <div class="row">
                 <div class="col c4">
                     <a href="/q/48.html" title="Cartoon Cubs Embroidered Cloth Sticker,2024-07-16 10:53:03" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721100133635422.webp" alt="Cartoon Cubs Embroidered Cloth Sticker,2024-07-16 10:53:03">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100133635422.webp" alt="Cartoon Cubs Embroidered Cloth Sticker,2024-07-16 10:53:03">
                         <b>$:49.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/47.html" title="Cartoon rabbit cat wing cloth,2024-07-16 10:09:29" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721097742315049.webp" alt="Cartoon rabbit cat wing cloth,2024-07-16 10:09:29">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097742315049.webp" alt="Cartoon rabbit cat wing cloth,2024-07-16 10:09:29">
                         <b>$:49.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/46.html" title="Skeleton Finger Ghost Head Embroidered Cloth Sticker,2024-07-16 09:41:08" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721101882184015.webp" alt="Skeleton Finger Ghost Head Embroidered Cloth Sticker,2024-07-16 09:41:08">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101882184015.webp" alt="Skeleton Finger Ghost Head Embroidered Cloth Sticker,2024-07-16 09:41:08">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/45.html" title="Embroidery Gesture Patch Fashion DIY Dress Patch,2024-07-16 09:15:46" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721093832149983.webp" alt="Embroidery Gesture Patch Fashion DIY Dress Patch,2024-07-16 09:15:46">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721093832149983.webp" alt="Embroidery Gesture Patch Fashion DIY Dress Patch,2024-07-16 09:15:46">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/44.html" title="Fish Embroidery Sticker,2024-07-16 08:59:59" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721092382830527.webp" alt="Fish Embroidery Sticker,2024-07-16 08:59:59">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092382830527.webp" alt="Fish Embroidery Sticker,2024-07-16 08:59:59">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/43.html" title="Skeleton embroidered cloth sticker,2024-07-16 07:49:11" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721091299902270.webp" alt="Skeleton embroidered cloth sticker,2024-07-16 07:49:11">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091299902270.webp" alt="Skeleton embroidered cloth sticker,2024-07-16 07:49:11">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/42.html" title="Bee Butterfly Ironing Sticker,2024-07-15 17:18:54" class="btn btn-a" >
-                        <img src="/u/upload/other/20240715/1721035723888537.webp" alt="Bee Butterfly Ironing Sticker,2024-07-15 17:18:54">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035723888537.webp" alt="Bee Butterfly Ironing Sticker,2024-07-15 17:18:54">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/40.html" title="Hundreds of birds face fengbu cloth embroidery cloth,2024-07-15 15:10:03" class="btn btn-a" >
-                        <img src="/u/upload/other/20240715/1721029314783487.webp" alt="Hundreds of birds face fengbu cloth embroidery cloth,2024-07-15 15:10:03">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029314783487.webp" alt="Hundreds of birds face fengbu cloth embroidery cloth,2024-07-15 15:10:03">
                         <b>$:69.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/39.html" title="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24" class="btn btn-a" >
-                        <img src="/u/upload/other/20240708/1720399319143229.webp" alt="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399319143229.webp" alt="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24">
                         <b>$:9.99</b>
                     </a>
                 </div><br />
@@ -84,7 +84,7 @@
             </div>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
