--- a/q/animal_5/index.html
+++ b/q/animal_5/index.html
@@ -28,31 +28,31 @@
             <div class="row">
                 <div class="col c4">
                     <a href="/q/27.html" title="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers,2024-07-06 08:35:35" class="btn btn-a" >
-                        <img src="/q/upload/other/20240706/1720226337562267.webp" alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers,2024-07-06 08:35:35">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720226337562267.webp" alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers,2024-07-06 08:35:35">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/26.html" title="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43" class="btn btn-a" >
-                        <img src="/q/upload/other/20240705/1720178843729859.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720178843729859.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43">
                         <b>$:19.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/25.html" title="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53" class="btn btn-a" >
-                        <img src="/q/upload/other/20240705/1720173688785484.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173688785484.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719800457809732.webp" alt="Skull cloth patch,2024-06-10 21:33:26">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719800457809732.webp" alt="Skull cloth patch,2024-06-10 21:33:26">
                         <b>$:12</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719800607934008.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719800607934008.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
                         <b>$:12</b>
                     </a>
                 </div><br />
@@ -60,7 +60,7 @@
             </div>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
