--- a/q/flower/index.html
+++ b/q/flower/index.html
@@ -28,55 +28,55 @@
             <div class="row">
                 <div class="col c4">
                     <a href="/q/60.html" title="Multicoloured flowers embroidery patch decoration,2024-07-16 17:11:02" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721121730300987.webp" alt="Multicoloured flowers embroidery patch decoration,2024-07-16 17:11:02">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121730300987.webp" alt="Multicoloured flowers embroidery patch decoration,2024-07-16 17:11:02">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/59.html" title="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker,2024-07-16 16:59:49" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721121005689493.webp" alt="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker,2024-07-16 16:59:49">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121005689493.webp" alt="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker,2024-07-16 16:59:49">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/55.html" title="Fruit and vegetable embroidery,2024-07-16 15:51:27" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721116996941079.webp" alt="Fruit and vegetable embroidery,2024-07-16 15:51:27">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116996941079.webp" alt="Fruit and vegetable embroidery,2024-07-16 15:51:27">
                         <b>$:69.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/54.html" title="Cartoon flower cloth embroidery patch,2024-07-16 15:44:12" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721116021995153.webp" alt="Cartoon flower cloth embroidery patch,2024-07-16 15:44:12">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116021995153.webp" alt="Cartoon flower cloth embroidery patch,2024-07-16 15:44:12">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/41.html" title="Embroidery Little Flowers,2024-07-15 15:47:49" class="btn btn-a" >
-                        <img src="/u/upload/other/20240715/1721031033744472.webp" alt="Embroidery Little Flowers,2024-07-15 15:47:49">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031033744472.webp" alt="Embroidery Little Flowers,2024-07-15 15:47:49">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/36.html" title="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25" class="btn btn-a" >
-                        <img src="/u/upload/other/20240707/1720334898412630.webp" alt="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720334898412630.webp" alt="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25">
                         <b>$:9.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719827829205743.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719827829205743.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">
                         <b>$:9.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/23.html" title="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719826678821251.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826678821251.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719821466380643.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719821466380643.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">
                         <b>$:9.99</b>
                     </a>
                 </div><br />
@@ -84,7 +84,7 @@
             </div>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
