--- a/q/13.html
+++ b/q/13.html
@@ -22,37 +22,37 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Embroidery flower bud lace flower applique</h1>
                 <time>2024-06-10</time>
-				 <p><a class="btn btn-sm btn-b" href="https://www.paypal.com/ncp/payment/66VQAQ864YKHC" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidery flower bud lace flower applique" />Buy Now  $:13.99 </a> <b class="btn btn-sm btn-c">S/N: A13</b></p>
+				 <p><a href="https://www.paypal.com/ncp/payment/66VQAQ864YKHC" target="_blank" class="btn btn-b smooth">  S/N: A13 Buy Now  $:13.99</a> </p>
                <p>Embroidery flower bud lace flower applique <br/></p><p>size: 30cm * 25cm</p><p>gum : None, sewing is required</p><p>color :&nbsp;This white</p><p>materail :&nbsp;polyester yarn</p><p><br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390770601289.webp">
-                        <img src="/q/upload/other/20240626/1719390770601289.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390770601289.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390770601289.webp" alt="Flower"/></a>
                         <b>Embroidery flower bud lace flower applique</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390785541558.webp">
-                        <img src="/q/upload/other/20240626/1719390785541558.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390785541558.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390785541558.webp" alt="Flower"/></a>
                         <b>Embroidery flower bud lace flower applique</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390867604008.webp">
-                        <img src="/q/upload/other/20240626/1719390867604008.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390867604008.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390867604008.webp" alt="Flower"/></a>
                         <b>Embroidery flower bud lace flower applique</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390867142653.webp">
-                        <img src="/q/upload/other/20240626/1719390867142653.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390867142653.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390867142653.webp" alt="Flower"/></a>
                         <b>Embroidery flower bud lace flower applique</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390867968414.webp">
-                        <img src="/q/upload/other/20240626/1719390867968414.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390867968414.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390867968414.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -61,7 +61,7 @@
             <p>Next: <a href="/q/14.html">Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
