--- a/q/17.html
+++ b/q/17.html
@@ -22,31 +22,31 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.</h1>
                 <time>2018-04-12</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery." />Buy Now  $:12.99 </a> <b class="btn btn-sm btn-c">S/N: A17</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A17 Buy Now  $:12.99</a> </p>
                <p>Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.</p><p>Pattern: Peony Flower</p><p>Backside Process：No adhesive</p><p>Size：35cmx15cm</p><p><br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240629/1719629797900540.webp">
-                        <img src="/q/upload/other/20240629/1719629797900540.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240629/1719629797900540.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240629/1719629797900540.webp" alt="Flower"/></a>
                         <b>Peony Flower</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240629/1719629855566906.webp">
-                        <img src="/q/upload/other/20240629/1719629855566906.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240629/1719629855566906.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240629/1719629855566906.webp" alt="Flower"/></a>
                         <b>Peony Flower</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240629/1719629855705374.webp">
-                        <img src="/q/upload/other/20240629/1719629855705374.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240629/1719629855705374.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240629/1719629855705374.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240629/1719629855864728.webp">
-                        <img src="/q/upload/other/20240629/1719629855864728.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240629/1719629855864728.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240629/1719629855864728.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -55,7 +55,7 @@
             <p>Next: <a href="/q/18.html">Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
