--- a/q/18.html
+++ b/q/18.html
@@ -22,19 +22,19 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</h1>
                 <time>2024-06-10</time>
-				 <p><a class="btn btn-sm btn-b" href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" />Buy Now  $:12.99 </a> <b class="btn btn-sm btn-c">S/N: A18</b></p>
+				 <p><a href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank" class="btn btn-b smooth">  S/N: A18 Buy Now  $:12.99</a> </p>
                <p>It will make your clothes look beautiful and unique, if you sewing the flowers embroidery lace neckline collar appliques on the clothes Material: polyester/fabric; Color: Pink&amp;wine red and brown; Only use of sewing(have no glue on back, do not iron on) Size: Approx.full 18cm width x 43cm length. (Due to the handmade sewing,size may vary one to another approx 0.3~0.5cm) Package Included: 1X 1 piece lace patches&nbsp;</p><p>&nbsp;This product will come with a true lifetime warranty that is good for one free replacement</p><p><br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719391194190860.webp">
-                        <img src="/q/upload/other/20240626/1719391194190860.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719391194190860.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391194190860.webp" alt="Flower"/></a>
                         <b>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719391197157726.webp">
-                        <img src="/q/upload/other/20240626/1719391197157726.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719391197157726.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391197157726.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -43,7 +43,7 @@
             <p>Next: <a href="/q/22.html">Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
