--- a/q/20.html
+++ b/q/20.html
@@ -22,25 +22,25 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Skull cloth patch</h1>
                 <time>2024-06-10</time>
-				 <p><a class="btn btn-sm btn-b" href="https://www.paypal.com/ncp/payment/U6MSC4MNYSYUG" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Skull cloth patch" />Buy Now  $:12 </a> <b class="btn btn-sm btn-c">S/N: A20</b></p>
+				 <p><a href="https://www.paypal.com/ncp/payment/U6MSC4MNYSYUG" target="_blank" class="btn btn-b smooth">  S/N: A20 Buy Now  $:12</a> </p>
                <p>Your clothes can be so gorgeous<br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719391022657043.webp">
-                        <img src="/q/upload/other/20240626/1719391022657043.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719391022657043.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391022657043.webp" alt="Animal"/></a>
                         <b>Your clothes can be so gorgeous</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719391026119535.webp">
-                        <img src="/q/upload/other/20240626/1719391026119535.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719391026119535.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391026119535.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719391028653581.webp">
-                        <img src="/q/upload/other/20240626/1719391028653581.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719391028653581.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391028653581.webp" alt="Animal"/></a>
                         <b>Your clothes</b>
                     </a>
                 </div> 
@@ -49,7 +49,7 @@
             <p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
