--- a/q/22.html
+++ b/q/22.html
@@ -22,67 +22,67 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</h1>
                 <time>2024-06-02</time>
-				 <p><a class="btn btn-sm btn-b" href="https://www.paypal.com/ncp/payment/MN4DKKMPP27A6" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" />Buy Now  $:12 </a> <b class="btn btn-sm btn-c">S/N: A22</b></p>
+				 <p><a href="https://www.paypal.com/ncp/payment/MN4DKKMPP27A6" target="_blank" class="btn btn-b smooth">  S/N: A22 Buy Now  $:12</a> </p>
                <p>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390299785042.webp">
-                        <img src="/q/upload/other/20240626/1719390299785042.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390299785042.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390299785042.webp" alt="Flower"/></a>
                         <b>Plum Water Soluble</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835379533190.webp">
-                        <img src="/q/upload/image/20201016/1602835379533190.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835379533190.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835379533190.webp" alt="Flower"/></a>
                         <b>S/N: A22-1</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835286604845.webp">
-                        <img src="/q/upload/image/20201016/1602835286604845.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835286604845.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286604845.webp" alt="Flower"/></a>
                         <b>S/N: A22-2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835286258353.webp">
-                        <img src="/q/upload/image/20201016/1602835286258353.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835286258353.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286258353.webp" alt="Flower"/></a>
                         <b>S/N: A22-3</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835286161825.webp">
-                        <img src="/q/upload/image/20201016/1602835286161825.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835286161825.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286161825.webp" alt="Flower"/></a>
                         <b>S/N: A22-4</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835286958424.webp">
-                        <img src="/q/upload/image/20201016/1602835286958424.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835286958424.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286958424.webp" alt="Flower"/></a>
                         <b>S/N: A22-5</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835286322972.webp">
-                        <img src="/q/upload/image/20201016/1602835286322972.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835286322972.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286322972.webp" alt="Flower"/></a>
                         <b>S/N: A22-6</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835364808371.webp">
-                        <img src="/q/upload/image/20201016/1602835364808371.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835364808371.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835364808371.webp" alt="Flower"/></a>
                         <b>S/N: A22-7</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835364279941.webp">
-                        <img src="/q/upload/image/20201016/1602835364279941.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835364279941.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835364279941.webp" alt="Flower"/></a>
                         <b>S/N: A22-8</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835364677527.webp">
-                        <img src="/q/upload/image/20201016/1602835364677527.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835364677527.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835364677527.webp" alt="Flower"/></a>
                         <b>S/N: A22-9</b>
                     </a>
                 </div> 
@@ -91,7 +91,7 @@
             <p>Next: <a href="/q/23.html">New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
