--- a/q/24.html
+++ b/q/24.html
@@ -22,133 +22,133 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers</h1>
                 <time>2024-07-01</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A24</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A24 Buy Now  $:9.99</a> </p>
                <p>Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers<br/></p><p><br/></p><p>Size: 38cmX20cm</p><p><br/></p><p>Complete set (8 styles in total) $49.99&nbsp;S/N: A25-B</p><p>Complete set (10 styles in total) $59.99&nbsp;S/N: A25-A</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719827856399960.webp">
-                        <img src="/q/upload/other/20240701/1719827856399960.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719827856399960.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719827856399960.webp" alt="Flower"/></a>
                         <b>water-soluble flowers</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240702/1719913920881701.webp">
-                        <img src="/q/upload/other/20240702/1719913920881701.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240702/1719913920881701.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240702/1719913920881701.webp" alt="Flower"/></a>
                         <b>S/N: A25-A</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240702/1719913920752310.webp">
-                        <img src="/q/upload/other/20240702/1719913920752310.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240702/1719913920752310.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240702/1719913920752310.webp" alt="Flower"/></a>
                         <b>S/N:  A25-B</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174969582447.webp">
-                        <img src="/q/upload/image/20240705/1720174969582447.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174969582447.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969582447.webp" alt="Flower"/></a>
                         <b>S/N:  A25-1</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174969268018.webp">
-                        <img src="/q/upload/image/20240705/1720174969268018.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174969268018.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969268018.webp" alt="Flower"/></a>
                         <b>S/N:  A25-2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174969654149.webp">
-                        <img src="/q/upload/image/20240705/1720174969654149.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174969654149.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969654149.webp" alt="Flower"/></a>
                         <b>S/N:  A25-3</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174969423689.webp">
-                        <img src="/q/upload/image/20240705/1720174969423689.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174969423689.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969423689.webp" alt="Flower"/></a>
                         <b>S/N:  A25-4</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174969182668.webp">
-                        <img src="/q/upload/image/20240705/1720174969182668.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174969182668.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969182668.webp" alt="Flower"/></a>
                         <b>S/N: A25-5</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174970379261.webp">
-                        <img src="/q/upload/image/20240705/1720174970379261.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174970379261.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970379261.webp" alt="Flower"/></a>
                         <b>S/N:  A25-6</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174970754244.webp">
-                        <img src="/q/upload/image/20240705/1720174970754244.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174970754244.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970754244.webp" alt="Flower"/></a>
                         <b>S/N: A25-7</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174970155085.webp">
-                        <img src="/q/upload/image/20240705/1720174970155085.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174970155085.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970155085.webp" alt="Flower"/></a>
                         <b>S/N:  A25-8</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174970359347.webp">
-                        <img src="/q/upload/image/20240705/1720174970359347.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174970359347.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970359347.webp" alt="Flower"/></a>
                         <b>S/N:  A25-9</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174970149637.webp">
-                        <img src="/q/upload/image/20240705/1720174970149637.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174970149637.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970149637.webp" alt="Flower"/></a>
                         <b>S/N:  A25-10</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045372000.webp">
-                        <img src="/q/upload/image/20240705/1720175045372000.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045372000.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045372000.webp" alt="Flower"/></a>
                         <b>S/N: A25-11</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045141654.webp">
-                        <img src="/q/upload/image/20240705/1720175045141654.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045141654.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045141654.webp" alt="Flower"/></a>
                         <b>S/N:  A25-12</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045743773.webp">
-                        <img src="/q/upload/image/20240705/1720175045743773.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045743773.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045743773.webp" alt="Flower"/></a>
                         <b>S/N:  A25-13</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045171076.webp">
-                        <img src="/q/upload/image/20240705/1720175045171076.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045171076.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045171076.webp" alt="Flower"/></a>
                         <b>S/N:  A25-14</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045562445.webp">
-                        <img src="/q/upload/image/20240705/1720175045562445.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045562445.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045562445.webp" alt="Flower"/></a>
                         <b>S/N:  A25-15</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045575816.webp">
-                        <img src="/q/upload/image/20240705/1720175045575816.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045575816.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045575816.webp" alt="Flower"/></a>
                         <b>S/N:  A25-16</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045872532.webp">
-                        <img src="/q/upload/image/20240705/1720175045872532.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045872532.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045872532.webp" alt="Flower"/></a>
                         <b>S/N:  A25-17</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045568884.webp">
-                        <img src="/q/upload/image/20240705/1720175045568884.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045568884.webp">
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045568884.webp" alt="Flower"/></a>
                         <b>S/N:  A25-18</b>
                     </a>
                 </div> 
@@ -157,7 +157,7 @@
             <p>Next: <a href="/q/36.html">Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
