--- a/q/26.html
+++ b/q/26.html
@@ -22,31 +22,31 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch</h1>
                 <time>2024-07-05</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch" />Buy Now  $:19.99 </a> <b class="btn btn-sm btn-c">S/N: A26</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A26 Buy Now  $:19.99</a> </p>
                <p>New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch</p><p>Complete set (6 styles in total) $:19.99</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240705/1720178898271490.webp">
-                        <img src="/q/upload/other/20240705/1720178898271490.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240705/1720178898271490.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720178898271490.webp" alt="Animal"/></a>
                         <b>Rabbit Embroidered</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240705/1720178898725880.webp">
-                        <img src="/q/upload/other/20240705/1720178898725880.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240705/1720178898725880.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720178898725880.webp" alt="Animal"/></a>
                         <b>Rabbit Embroidered</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240705/1720178898330760.webp">
-                        <img src="/q/upload/other/20240705/1720178898330760.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240705/1720178898330760.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720178898330760.webp" alt="Animal"/></a>
                         <b>Rabbit Embroidered</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720239572208078.webp">
-                        <img src="/q/upload/other/20240706/1720239572208078.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720239572208078.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720239572208078.webp" alt="Animal"/></a>
                         <b>Size in cm</b>
                     </a>
                 </div> 
@@ -55,7 +55,7 @@
             <p>Next: <a href="/q/27.html">Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
