--- a/q/29.html
+++ b/q/29.html
@@ -22,31 +22,31 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch</h1>
                 <time>2024-07-06</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A29</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A29 Buy Now  $:29.99</a> </p>
                <p>Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch</p><p>Complete set (15 styles in total) $:29.99</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720248942347381.webp">
-                        <img src="/q/upload/other/20240706/1720248942347381.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720248942347381.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248942347381.webp" alt="Animal"/></a>
                         <b>Cartoon Planet Astronaut</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720248942814721.webp">
-                        <img src="/q/upload/other/20240706/1720248942814721.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720248942814721.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248942814721.webp" alt="Animal"/></a>
                         <b>Cartoon Planet Astronaut</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720248942863520.webp">
-                        <img src="/q/upload/other/20240706/1720248942863520.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720248942863520.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248942863520.webp" alt="Animal"/></a>
                         <b>Cartoon Planet Astronaut</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720248942709677.webp">
-                        <img src="/q/upload/other/20240706/1720248942709677.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720248942709677.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248942709677.webp" alt="Animal"/></a>
                         <b>Cartoon Planet Astronaut</b>
                     </a>
                 </div> 
@@ -55,7 +55,7 @@
             <p>Next: <a href="/q/30.html">Cartoon Panda Cute Embroidered Cloth Sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
