--- a/q/31.html
+++ b/q/31.html
@@ -22,37 +22,37 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cute cartoon cat</h1>
                 <time>2024-07-06</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cute cartoon cat" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A31</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A31 Buy Now  $:9.99</a> </p>
                
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720250451226758.webp">
-                        <img src="/q/upload/other/20240706/1720250451226758.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720250451226758.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451226758.webp" alt="Animal"/></a>
                         <b>Cute cartoon cat</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720250451268689.webp">
-                        <img src="/q/upload/other/20240706/1720250451268689.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720250451268689.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451268689.webp" alt="Animal"/></a>
                         <b>Cute cartoon cat</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720250451359022.webp">
-                        <img src="/q/upload/other/20240706/1720250451359022.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720250451359022.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451359022.webp" alt="Animal"/></a>
                         <b>Cute cartoon cat</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720250451917034.webp">
-                        <img src="/q/upload/other/20240706/1720250451917034.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720250451917034.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451917034.webp" alt="Animal"/></a>
                         <b>Cute cartoon cat</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720250451204621.webp">
-                        <img src="/q/upload/other/20240706/1720250451204621.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720250451204621.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451204621.webp" alt="Animal"/></a>
                         <b>Cute cartoon cat</b>
                     </a>
                 </div> 
@@ -61,7 +61,7 @@
             <p>Next: <a href="/q/32.html">Cartoon flower butterfly embroidered fabric patch</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
