--- a/q/37.html
+++ b/q/37.html
@@ -22,73 +22,73 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cute little tiger embroidery patch</h1>
                 <time>2024-07-07</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cute little tiger embroidery patch" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A37</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A37 Buy Now  $:29.99</a> </p>
                <p>Cute Little Tiger Embroidery Patch DIY Phone Case Clothing Accessories Decoration Cartoon Cloth Patch Patch &nbsp; <br/></p><p>Complete set (9 styles in total) $:29.99</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281677699.webp">
-                        <img src="/u/upload/other/20240707/1720335281677699.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281677699.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281677699.webp" alt="Animal"/></a>
                         <b>Cute little tiger</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281128069.webp">
-                        <img src="/u/upload/other/20240707/1720335281128069.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281128069.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281128069.webp" alt="Animal"/></a>
                         <b>S/N: A37</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281990026.webp">
-                        <img src="/u/upload/other/20240707/1720335281990026.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281990026.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281990026.webp" alt="Animal"/></a>
                         <b>S/N: A37-1</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281843646.webp">
-                        <img src="/u/upload/other/20240707/1720335281843646.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281843646.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281843646.webp" alt="Animal"/></a>
                         <b>S/N: A37-2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281718311.webp">
-                        <img src="/u/upload/other/20240707/1720335281718311.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281718311.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281718311.webp" alt="Animal"/></a>
                         <b>S/N: A37-3</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281941981.webp">
-                        <img src="/u/upload/other/20240707/1720335281941981.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281941981.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281941981.webp" alt="Animal"/></a>
                         <b>S/N: A37-4</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281779217.webp">
-                        <img src="/u/upload/other/20240707/1720335281779217.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281779217.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281779217.webp" alt="Animal"/></a>
                         <b>S/N: A37-5</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281394444.webp">
-                        <img src="/u/upload/other/20240707/1720335281394444.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281394444.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281394444.webp" alt="Animal"/></a>
                         <b>S/N: A37-6</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281178361.webp">
-                        <img src="/u/upload/other/20240707/1720335281178361.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281178361.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281178361.webp" alt="Animal"/></a>
                         <b>S/N: A37-7</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281855742.webp">
-                        <img src="/u/upload/other/20240707/1720335281855742.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281855742.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281855742.webp" alt="Animal"/></a>
                         <b>S/N: A37-8</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281439605.webp">
-                        <img src="/u/upload/other/20240707/1720335281439605.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281439605.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281439605.webp" alt="Animal"/></a>
                         <b>S/N: A37-9</b>
                     </a>
                 </div> 
@@ -97,7 +97,7 @@
             <p>Next: <a href="/q/39.html">Twelve Zodiac Embroidered Cloth Sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
