--- a/q/42.html
+++ b/q/42.html
@@ -22,103 +22,103 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Bee Butterfly Ironing Sticker</h1>
                 <time>2024-07-15</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Bee Butterfly Ironing Sticker" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A42</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A42 Buy Now  $:39.99</a> </p>
                <p>Bee Butterfly Ironing Sticking Insect Patch Sticker Embroidery Sticker Embroidery Color Sticker</p><p>Complete set (17 styles in total) $:39.99 <br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035729608726.webp">
-                        <img src="/u/upload/other/20240715/1721035729608726.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035729608726.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035729608726.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752394881.webp">
-                        <img src="/u/upload/other/20240715/1721035752394881.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752394881.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752394881.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752424554.webp">
-                        <img src="/u/upload/other/20240715/1721035752424554.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752424554.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752424554.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752813734.webp">
-                        <img src="/u/upload/other/20240715/1721035752813734.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752813734.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752813734.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752472048.webp">
-                        <img src="/u/upload/other/20240715/1721035752472048.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752472048.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752472048.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752117497.webp">
-                        <img src="/u/upload/other/20240715/1721035752117497.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752117497.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752117497.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752603486.webp">
-                        <img src="/u/upload/other/20240715/1721035752603486.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752603486.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752603486.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752819261.webp">
-                        <img src="/u/upload/other/20240715/1721035752819261.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752819261.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752819261.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752304805.webp">
-                        <img src="/u/upload/other/20240715/1721035752304805.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752304805.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752304805.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752887778.webp">
-                        <img src="/u/upload/other/20240715/1721035752887778.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752887778.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752887778.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752579861.webp">
-                        <img src="/u/upload/other/20240715/1721035752579861.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752579861.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752579861.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752571512.webp">
-                        <img src="/u/upload/other/20240715/1721035752571512.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752571512.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752571512.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752835907.webp">
-                        <img src="/u/upload/other/20240715/1721035752835907.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752835907.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752835907.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752530049.webp">
-                        <img src="/u/upload/other/20240715/1721035752530049.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752530049.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752530049.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752912575.webp">
-                        <img src="/u/upload/other/20240715/1721035752912575.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752912575.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752912575.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752476947.webp">
-                        <img src="/u/upload/other/20240715/1721035752476947.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752476947.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752476947.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -127,7 +127,7 @@
             <p>Next: <a href="/q/43.html">Skeleton embroidered cloth sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
