--- a/q/43.html
+++ b/q/43.html
@@ -22,67 +22,67 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Skeleton embroidered cloth sticker</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Skeleton embroidered cloth sticker" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A43</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A43 Buy Now  $:39.99</a> </p>
                <p>Skeleton embroidered cloth with large embroidered clothes patch sticker cartoon anime avatar wholesale</p><p>Complete set (9 styles in total) $:39.99 <br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721091303662281.webp">
-                        <img src="/u/upload/other/20240716/1721091303662281.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091303662281.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091303662281.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721091309349657.webp">
-                        <img src="/u/upload/other/20240716/1721091309349657.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309349657.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309349657.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721091309387777.webp">
-                        <img src="/u/upload/other/20240716/1721091309387777.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309387777.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309387777.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721091309948974.webp">
-                        <img src="/u/upload/other/20240716/1721091309948974.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309948974.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309948974.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721091309677447.webp">
-                        <img src="/u/upload/other/20240716/1721091309677447.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309677447.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309677447.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721091309692990.webp">
-                        <img src="/u/upload/other/20240716/1721091309692990.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309692990.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309692990.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721091309195218.webp">
-                        <img src="/u/upload/other/20240716/1721091309195218.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309195218.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309195218.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721091309690006.webp">
-                        <img src="/u/upload/other/20240716/1721091309690006.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309690006.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309690006.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721091309926854.webp">
-                        <img src="/u/upload/other/20240716/1721091309926854.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309926854.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309926854.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721091309692302.webp">
-                        <img src="/u/upload/other/20240716/1721091309692302.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309692302.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309692302.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -91,7 +91,7 @@
             <p>Next: <a href="/q/44.html">Fish Embroidery Sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
