--- a/q/44.html
+++ b/q/44.html
@@ -22,109 +22,109 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Fish Embroidery Sticker</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Fish Embroidery Sticker" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A44</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A44 Buy Now  $:39.99</a> </p>
                <p>Little Fish Embroidered Sticker Kitten Patch Computer Embroidered Seal Cartoon Embroidered Cloth Sticker</p><p>Complete set (16 styles in total) $:39.99 <br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092385769122.webp">
-                        <img src="/u/upload/other/20240716/1721092385769122.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092385769122.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092385769122.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392219256.webp">
-                        <img src="/u/upload/other/20240716/1721092392219256.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392219256.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392219256.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392547280.webp">
-                        <img src="/u/upload/other/20240716/1721092392547280.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392547280.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392547280.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392240873.webp">
-                        <img src="/u/upload/other/20240716/1721092392240873.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392240873.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392240873.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392863543.webp">
-                        <img src="/u/upload/other/20240716/1721092392863543.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392863543.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392863543.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392708327.webp">
-                        <img src="/u/upload/other/20240716/1721092392708327.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392708327.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392708327.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392104679.webp">
-                        <img src="/u/upload/other/20240716/1721092392104679.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392104679.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392104679.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392254042.webp">
-                        <img src="/u/upload/other/20240716/1721092392254042.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392254042.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392254042.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392286346.webp">
-                        <img src="/u/upload/other/20240716/1721092392286346.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392286346.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392286346.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392797738.webp">
-                        <img src="/u/upload/other/20240716/1721092392797738.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392797738.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392797738.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392281936.webp">
-                        <img src="/u/upload/other/20240716/1721092392281936.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392281936.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392281936.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392608082.webp">
-                        <img src="/u/upload/other/20240716/1721092392608082.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392608082.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392608082.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392540360.webp">
-                        <img src="/u/upload/other/20240716/1721092392540360.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392540360.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392540360.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392402751.webp">
-                        <img src="/u/upload/other/20240716/1721092392402751.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392402751.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392402751.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392568444.webp">
-                        <img src="/u/upload/other/20240716/1721092392568444.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392568444.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392568444.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392533888.webp">
-                        <img src="/u/upload/other/20240716/1721092392533888.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392533888.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392533888.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392411528.webp">
-                        <img src="/u/upload/other/20240716/1721092392411528.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392411528.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392411528.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -133,7 +133,7 @@
             <p>Next: <a href="/q/45.html">Embroidery Gesture Patch Fashion DIY Dress Patch</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
