--- a/q/45.html
+++ b/q/45.html
@@ -22,55 +22,55 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Embroidery Gesture Patch Fashion DIY Dress Patch</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidery Gesture Patch Fashion DIY Dress Patch" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A45</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A45 Buy Now  $:39.99</a> </p>
                <p>Small Cartoon Cloth Embroidery Gesture Patch Fashion Clothes Patch Accessories Decorative Paste</p><p>Complete set (7 styles in total) $:39.99<br/></p><p><br/></p><p>Eyes&nbsp;$:9.99 &nbsp;1pcs</p><p>Hand&nbsp;$:9.99 &nbsp;1pcs</p><p>Hands&nbsp;$:9.99 &nbsp;1pcs</p><p>Leaves&nbsp;$:9.99&nbsp; 1pcs</p><p>Eyebrows&nbsp;$:9.99 &nbsp;1pcs</p><p><br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093835624428.webp">
-                        <img src="/u/upload/other/20240716/1721093835624428.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721093835624428.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721093835624428.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841231736.webp">
-                        <img src="/u/upload/other/20240716/1721093841231736.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721093841231736.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721093841231736.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841748746.webp">
-                        <img src="/u/upload/other/20240716/1721093841748746.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721093841748746.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721093841748746.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841970116.webp">
-                        <img src="/u/upload/other/20240716/1721093841970116.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721093841970116.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721093841970116.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841216887.webp">
-                        <img src="/u/upload/other/20240716/1721093841216887.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721093841216887.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721093841216887.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841942526.webp">
-                        <img src="/u/upload/other/20240716/1721093841942526.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721093841942526.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721093841942526.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841274096.webp">
-                        <img src="/u/upload/other/20240716/1721093841274096.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721093841274096.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721093841274096.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841740164.webp">
-                        <img src="/u/upload/other/20240716/1721093841740164.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721093841740164.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721093841740164.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -79,7 +79,7 @@
             <p>Next: <a href="/q/46.html">Skeleton Finger Ghost Head Embroidered Cloth Sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
