--- a/q/46.html
+++ b/q/46.html
@@ -22,61 +22,61 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Skeleton Finger Ghost Head Embroidered Cloth Sticker</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Skeleton Finger Ghost Head Embroidered Cloth Sticker" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A46</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A46 Buy Now  $:39.99</a> </p>
                <p>Skull Finger Ghost Head Embroidery Cloth Embroidery Embroidery Emblem Badge Patch Apparel Accessories</p><p>Complete set (9 styles in total) $:39.99 <br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101888860963.webp">
-                        <img src="/u/upload/other/20240716/1721101888860963.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888860963.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888860963.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101888571014.webp">
-                        <img src="/u/upload/other/20240716/1721101888571014.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888571014.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888571014.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101888104566.webp">
-                        <img src="/u/upload/other/20240716/1721101888104566.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888104566.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888104566.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101888706187.webp">
-                        <img src="/u/upload/other/20240716/1721101888706187.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888706187.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888706187.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101888187640.webp">
-                        <img src="/u/upload/other/20240716/1721101888187640.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888187640.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888187640.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101888896170.webp">
-                        <img src="/u/upload/other/20240716/1721101888896170.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888896170.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888896170.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101888163062.webp">
-                        <img src="/u/upload/other/20240716/1721101888163062.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888163062.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888163062.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101888961252.webp">
-                        <img src="/u/upload/other/20240716/1721101888961252.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888961252.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888961252.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721101888889801.webp">
-                        <img src="/u/upload/other/20240716/1721101888889801.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888889801.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888889801.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -85,7 +85,7 @@
             <p>Next: <a href="/q/47.html">Cartoon rabbit cat wing cloth</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
