--- a/q/47.html
+++ b/q/47.html
@@ -22,127 +22,127 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cartoon rabbit cat wing cloth</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon rabbit cat wing cloth" />Buy Now  $:49.99 </a> <b class="btn btn-sm btn-c">S/N: A47</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A47 Buy Now  $:49.99</a> </p>
                <p>Cartoon Rabbit Cat Wing Cloth Decorative Clothing Subsidy</p><p>Complete set (19 styles in total) $:49.99 <br/></p><p><br/></p><p>可熨 可烫： Can be ironed</p><p>尺寸 5.5*7.5厘米:&nbsp; Size 5.5cm*7.5cm</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097746634082.webp">
-                        <img src="/u/upload/other/20240716/1721097746634082.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097746634082.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097746634082.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753940617.webp">
-                        <img src="/u/upload/other/20240716/1721097753940617.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753940617.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753940617.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753632059.webp">
-                        <img src="/u/upload/other/20240716/1721097753632059.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753632059.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753632059.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753981101.webp">
-                        <img src="/u/upload/other/20240716/1721097753981101.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753981101.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753981101.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753868050.webp">
-                        <img src="/u/upload/other/20240716/1721097753868050.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753868050.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753868050.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753911886.webp">
-                        <img src="/u/upload/other/20240716/1721097753911886.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753911886.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753911886.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753771122.webp">
-                        <img src="/u/upload/other/20240716/1721097753771122.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753771122.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753771122.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753217495.webp">
-                        <img src="/u/upload/other/20240716/1721097753217495.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753217495.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753217495.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753930695.webp">
-                        <img src="/u/upload/other/20240716/1721097753930695.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753930695.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753930695.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753895646.webp">
-                        <img src="/u/upload/other/20240716/1721097753895646.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753895646.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753895646.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753100988.webp">
-                        <img src="/u/upload/other/20240716/1721097753100988.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753100988.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753100988.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753854608.webp">
-                        <img src="/u/upload/other/20240716/1721097753854608.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753854608.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753854608.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753914821.webp">
-                        <img src="/u/upload/other/20240716/1721097753914821.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753914821.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753914821.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753271906.webp">
-                        <img src="/u/upload/other/20240716/1721097753271906.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753271906.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753271906.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753799662.webp">
-                        <img src="/u/upload/other/20240716/1721097753799662.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753799662.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753799662.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753855257.webp">
-                        <img src="/u/upload/other/20240716/1721097753855257.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753855257.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753855257.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753519459.webp">
-                        <img src="/u/upload/other/20240716/1721097753519459.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753519459.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753519459.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753194978.webp">
-                        <img src="/u/upload/other/20240716/1721097753194978.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753194978.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753194978.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753913142.webp">
-                        <img src="/u/upload/other/20240716/1721097753913142.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753913142.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753913142.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753306919.webp">
-                        <img src="/u/upload/other/20240716/1721097753306919.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721097753306919.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097753306919.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -151,7 +151,7 @@
             <p>Next: <a href="/q/48.html">Cartoon Cubs Embroidered Cloth Sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
