--- a/q/50.html
+++ b/q/50.html
@@ -22,67 +22,67 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Embroidery cloth paste wholesale</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidery cloth paste wholesale" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A50</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A50 Buy Now  $:39.99</a> </p>
                <p>Embroidery cloth paste wholesale small patch decal personality cute children&#39;s clothing accessories clothing bag hat accessories</p><p>Complete set (9 styles in total) $:39.99</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721112305365167.webp">
-                        <img src="/u/upload/other/20240716/1721112305365167.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721112305365167.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721112305365167.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721112310989035.webp">
-                        <img src="/u/upload/other/20240716/1721112310989035.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721112310989035.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721112310989035.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721112310353524.webp">
-                        <img src="/u/upload/other/20240716/1721112310353524.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721112310353524.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721112310353524.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721112310245182.webp">
-                        <img src="/u/upload/other/20240716/1721112310245182.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721112310245182.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721112310245182.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721112310192672.webp">
-                        <img src="/u/upload/other/20240716/1721112310192672.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721112310192672.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721112310192672.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721112310595024.webp">
-                        <img src="/u/upload/other/20240716/1721112310595024.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721112310595024.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721112310595024.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721112310361144.webp">
-                        <img src="/u/upload/other/20240716/1721112310361144.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721112310361144.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721112310361144.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721112310811803.webp">
-                        <img src="/u/upload/other/20240716/1721112310811803.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721112310811803.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721112310811803.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721112512646516.webp">
-                        <img src="/u/upload/other/20240716/1721112512646516.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721112512646516.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721112512646516.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721112310902301.webp">
-                        <img src="/u/upload/other/20240716/1721112310902301.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721112310902301.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721112310902301.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -91,7 +91,7 @@
             <p>Next: <a href="/q/51.html">Flamingo Embroidery Cloth Sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
