--- a/q/54.html
+++ b/q/54.html
@@ -22,97 +22,97 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Cartoon flower cloth embroidery patch</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon flower cloth embroidery patch" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A54</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A54 Buy Now  $:39.99</a> </p>
                <p>Cartoon Flower Cloth Embroidery Patch Subsidy 14 Flowers</p><p>Complete set (14 styles in total) $:39.99<br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116024205321.webp">
-                        <img src="/u/upload/other/20240716/1721116024205321.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116024205321.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116024205321.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150175416.webp">
-                        <img src="/u/upload/other/20240716/1721116150175416.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150175416.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150175416.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150209589.webp">
-                        <img src="/u/upload/other/20240716/1721116150209589.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150209589.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150209589.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150127197.webp">
-                        <img src="/u/upload/other/20240716/1721116150127197.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150127197.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150127197.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150624104.webp">
-                        <img src="/u/upload/other/20240716/1721116150624104.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150624104.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150624104.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150917771.webp">
-                        <img src="/u/upload/other/20240716/1721116150917771.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150917771.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150917771.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150135730.webp">
-                        <img src="/u/upload/other/20240716/1721116150135730.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150135730.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150135730.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150112653.webp">
-                        <img src="/u/upload/other/20240716/1721116150112653.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150112653.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150112653.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150700038.webp">
-                        <img src="/u/upload/other/20240716/1721116150700038.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150700038.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150700038.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150815388.webp">
-                        <img src="/u/upload/other/20240716/1721116150815388.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150815388.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150815388.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150703530.webp">
-                        <img src="/u/upload/other/20240716/1721116150703530.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150703530.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150703530.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150164311.webp">
-                        <img src="/u/upload/other/20240716/1721116150164311.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150164311.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150164311.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150574213.webp">
-                        <img src="/u/upload/other/20240716/1721116150574213.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150574213.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150574213.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150281367.webp">
-                        <img src="/u/upload/other/20240716/1721116150281367.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150281367.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150281367.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150112397.webp">
-                        <img src="/u/upload/other/20240716/1721116150112397.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721116150112397.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116150112397.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -121,7 +121,7 @@
             <p>Next: <a href="/q/55.html">Fruit and vegetable embroidery</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
