--- a/q/57.html
+++ b/q/57.html
@@ -22,109 +22,109 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Panda Embroidery Cloth Sticker</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Panda Embroidery Cloth Sticker" />Buy Now  $:59.99 </a> <b class="btn btn-sm btn-c">S/N: A57</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A57 Buy Now  $:59.99</a> </p>
                <p>Cute panda Embroidery Cloth Embroidered Cartoon Patch Embroidery Embellishment Color panda Cloth.</p><p>Complete set (16 styles in total) $:59.99<br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118142796467.webp">
-                        <img src="/u/upload/other/20240716/1721118142796467.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118142796467.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118142796467.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148929361.webp">
-                        <img src="/u/upload/other/20240716/1721118148929361.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148929361.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148929361.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148435208.webp">
-                        <img src="/u/upload/other/20240716/1721118148435208.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148435208.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148435208.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148961076.webp">
-                        <img src="/u/upload/other/20240716/1721118148961076.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148961076.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148961076.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148404632.webp">
-                        <img src="/u/upload/other/20240716/1721118148404632.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148404632.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148404632.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148591663.webp">
-                        <img src="/u/upload/other/20240716/1721118148591663.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148591663.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148591663.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148470109.webp">
-                        <img src="/u/upload/other/20240716/1721118148470109.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148470109.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148470109.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148105633.webp">
-                        <img src="/u/upload/other/20240716/1721118148105633.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148105633.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148105633.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148665297.webp">
-                        <img src="/u/upload/other/20240716/1721118148665297.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148665297.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148665297.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148350318.webp">
-                        <img src="/u/upload/other/20240716/1721118148350318.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148350318.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148350318.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148584702.webp">
-                        <img src="/u/upload/other/20240716/1721118148584702.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148584702.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148584702.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148482332.webp">
-                        <img src="/u/upload/other/20240716/1721118148482332.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148482332.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148482332.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148497955.webp">
-                        <img src="/u/upload/other/20240716/1721118148497955.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148497955.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148497955.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148899350.webp">
-                        <img src="/u/upload/other/20240716/1721118148899350.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148899350.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148899350.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148970635.webp">
-                        <img src="/u/upload/other/20240716/1721118148970635.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148970635.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148970635.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148615687.webp">
-                        <img src="/u/upload/other/20240716/1721118148615687.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148615687.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148615687.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721118148238350.webp">
-                        <img src="/u/upload/other/20240716/1721118148238350.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721118148238350.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118148238350.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -133,7 +133,7 @@
             <p>Next: <a href="/q/58.html">Cute Five Star Embroidery Cloth Sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
