--- a/q/61.html
+++ b/q/61.html
@@ -22,85 +22,85 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cartoon animal bear head embroidery cloth sticker</h1>
                 <time>2024-07-16</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon animal bear head embroidery cloth sticker" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A61</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A61 Buy Now  $:39.99</a> </p>
                <p>Cartoon animal embroidery cloth affixed bear head embroidery decal subsidy decoration subsidy.</p><p>Complete set (12 styles in total) $:39.99</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721122107665288.webp">
-                        <img src="/u/upload/other/20240716/1721122107665288.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721122107665288.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122107665288.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721122112245593.webp">
-                        <img src="/u/upload/other/20240716/1721122112245593.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721122112245593.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122112245593.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721122112112758.webp">
-                        <img src="/u/upload/other/20240716/1721122112112758.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721122112112758.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122112112758.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721122112117546.webp">
-                        <img src="/u/upload/other/20240716/1721122112117546.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721122112117546.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122112117546.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721122112144601.webp">
-                        <img src="/u/upload/other/20240716/1721122112144601.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721122112144601.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122112144601.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721122112848103.webp">
-                        <img src="/u/upload/other/20240716/1721122112848103.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721122112848103.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122112848103.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721122112308359.webp">
-                        <img src="/u/upload/other/20240716/1721122112308359.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721122112308359.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122112308359.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721122112143077.webp">
-                        <img src="/u/upload/other/20240716/1721122112143077.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721122112143077.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122112143077.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721122112145219.webp">
-                        <img src="/u/upload/other/20240716/1721122112145219.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721122112145219.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122112145219.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721122112911129.webp">
-                        <img src="/u/upload/other/20240716/1721122112911129.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721122112911129.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122112911129.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721122112969488.webp">
-                        <img src="/u/upload/other/20240716/1721122112969488.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721122112969488.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122112969488.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721122112145023.webp">
-                        <img src="/u/upload/other/20240716/1721122112145023.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721122112145023.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122112145023.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721122112504305.webp">
-                        <img src="/u/upload/other/20240716/1721122112504305.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721122112504305.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122112504305.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -109,7 +109,7 @@
             <p>Next: <a href="/q/62.html">Five Star Embroidery Cloth Sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
