--- a/q/64.html
+++ b/q/64.html
@@ -22,49 +22,49 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Mid-Autumn Element Rabbit Embroidery Cloth Stic</h1>
                 <time>2024-07-17</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Mid-Autumn Element Rabbit Embroidery Cloth Stic" />Buy Now  $:19.99 </a> <b class="btn btn-sm btn-c">S/N: A64</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A64 Buy Now  $:19.99</a> </p>
                <p>Mid-Autumn Elements Rabbit Embroidery Cloth Tote Bag Decoration Antique Flower Embroidery Suit Loading Auxiliary Materials</p><p>Complete set (4 styles in total) $:19.99 <br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721200186216618.webp">
-                        <img src="/u/upload/other/20240717/1721200186216618.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200186216618.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200186216618.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721200189268075.webp">
-                        <img src="/u/upload/other/20240717/1721200189268075.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200189268075.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200189268075.webp" alt="Animal"/></a>
                         <b>S/N: A64</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721200197342295.webp">
-                        <img src="/u/upload/other/20240717/1721200197342295.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200197342295.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197342295.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721200197270573.webp">
-                        <img src="/u/upload/other/20240717/1721200197270573.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200197270573.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197270573.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721200197769184.webp">
-                        <img src="/u/upload/other/20240717/1721200197769184.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200197769184.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197769184.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721200197558421.webp">
-                        <img src="/u/upload/other/20240717/1721200197558421.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200197558421.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197558421.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721200197990874.webp">
-                        <img src="/u/upload/other/20240717/1721200197990874.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200197990874.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197990874.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -73,7 +73,7 @@
             <p>Next: <a href="/q/65.html">Cute cartoon panda cloth sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
