--- a/q/67.html
+++ b/q/67.html
@@ -22,109 +22,109 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Cute Flowers Butterfly Embroidery Cloth Sticker</h1>
                 <time>2024-07-17</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cute Flowers Butterfly Embroidery Cloth Sticker" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A67</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A67 Buy Now  $:39.99</a> </p>
                <p>Cute Flowers Butterfly Embroidered Cloth Embroidered Embroidered Applique Cloth Package Embellished Garment Ding Paste Wholesale.</p><p>Complete set (13 styles in total) $:39.99 &nbsp;<br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208101380205.webp">
-                        <img src="/u/upload/other/20240717/1721208101380205.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208101380205.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208101380205.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208101175382.webp">
-                        <img src="/u/upload/other/20240717/1721208101175382.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208101175382.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208101175382.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208101681925.webp">
-                        <img src="/u/upload/other/20240717/1721208101681925.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208101681925.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208101681925.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208101889694.webp">
-                        <img src="/u/upload/other/20240717/1721208101889694.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208101889694.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208101889694.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108414709.webp">
-                        <img src="/u/upload/other/20240717/1721208108414709.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208108414709.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208108414709.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108862432.webp">
-                        <img src="/u/upload/other/20240717/1721208108862432.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208108862432.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208108862432.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108461262.webp">
-                        <img src="/u/upload/other/20240717/1721208108461262.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208108461262.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208108461262.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108445533.webp">
-                        <img src="/u/upload/other/20240717/1721208108445533.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208108445533.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208108445533.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108180373.webp">
-                        <img src="/u/upload/other/20240717/1721208108180373.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208108180373.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208108180373.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108376336.webp">
-                        <img src="/u/upload/other/20240717/1721208108376336.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208108376336.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208108376336.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108756853.webp">
-                        <img src="/u/upload/other/20240717/1721208108756853.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208108756853.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208108756853.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108573000.webp">
-                        <img src="/u/upload/other/20240717/1721208108573000.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208108573000.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208108573000.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108803122.webp">
-                        <img src="/u/upload/other/20240717/1721208108803122.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208108803122.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208108803122.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108363774.webp">
-                        <img src="/u/upload/other/20240717/1721208108363774.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208108363774.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208108363774.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108658412.webp">
-                        <img src="/u/upload/other/20240717/1721208108658412.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208108658412.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208108658412.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108759162.webp">
-                        <img src="/u/upload/other/20240717/1721208108759162.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208108759162.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208108759162.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108283841.webp">
-                        <img src="/u/upload/other/20240717/1721208108283841.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721208108283841.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208108283841.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -133,7 +133,7 @@
             <p>Next: <a href="/q/68.html">Planet Cartoon Astronaut Embroidered Cloth Sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
