--- a/q/69.html
+++ b/q/69.html
@@ -22,79 +22,79 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Embroidery bear cartoon animal embroidery cloth sticker</h1>
                 <time>2024-07-18</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidery bear cartoon animal embroidery cloth sticker" />Buy Now  $:19.99 </a> <b class="btn btn-sm btn-c">S/N: A69</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A69 Buy Now  $:19.99</a> </p>
                <p>Embroidery bear cartoon animal embroidery cloth sticker cute bag clothes sticker diy patch wholesale.</p><p>Complete set (9 styles in total) $:19.99 <br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272523620786.webp">
-                        <img src="/u/upload/other/20240718/1721272523620786.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272523620786.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272523620786.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272523739168.webp">
-                        <img src="/u/upload/other/20240718/1721272523739168.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272523739168.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272523739168.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272523441288.webp">
-                        <img src="/u/upload/other/20240718/1721272523441288.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272523441288.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272523441288.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899453758.webp">
-                        <img src="/u/upload/other/20240718/1721272899453758.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899453758.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899453758.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899423559.webp">
-                        <img src="/u/upload/other/20240718/1721272899423559.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899423559.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899423559.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899676586.webp">
-                        <img src="/u/upload/other/20240718/1721272899676586.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899676586.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899676586.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899659037.webp">
-                        <img src="/u/upload/other/20240718/1721272899659037.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899659037.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899659037.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899130794.webp">
-                        <img src="/u/upload/other/20240718/1721272899130794.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899130794.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899130794.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899484947.webp">
-                        <img src="/u/upload/other/20240718/1721272899484947.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899484947.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899484947.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899491867.webp">
-                        <img src="/u/upload/other/20240718/1721272899491867.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899491867.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899491867.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899417818.webp">
-                        <img src="/u/upload/other/20240718/1721272899417818.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899417818.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899417818.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899954317.webp">
-                        <img src="/u/upload/other/20240718/1721272899954317.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899954317.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899954317.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -103,7 +103,7 @@
             <p>Next: <a href="/q/70.html">Bear Head Cartoon Animal Cloth Sticker</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
