--- a/q/70.html
+++ b/q/70.html
@@ -22,67 +22,67 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
                 <h1>Bear Head Cartoon Animal Cloth Sticker</h1>
                 <time>2024-07-18</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Bear Head Cartoon Animal Cloth Sticker" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A70</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A70 Buy Now  $:29.99</a> </p>
                <p>Embroidery bearhead cartoon animal cloth cloth accessory patch clothing accessory handbill self-paste cloth.</p><p>Complete set (8 styles in total) $:29.99 &nbsp;<br/></p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274583932679.webp">
-                        <img src="/u/upload/other/20240718/1721274583932679.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274583932679.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274583932679.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274583111882.webp">
-                        <img src="/u/upload/other/20240718/1721274583111882.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274583111882.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274583111882.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588278466.webp">
-                        <img src="/u/upload/other/20240718/1721274588278466.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588278466.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588278466.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588960308.webp">
-                        <img src="/u/upload/other/20240718/1721274588960308.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588960308.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588960308.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588221604.webp">
-                        <img src="/u/upload/other/20240718/1721274588221604.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588221604.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588221604.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588541474.webp">
-                        <img src="/u/upload/other/20240718/1721274588541474.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588541474.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588541474.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588579228.webp">
-                        <img src="/u/upload/other/20240718/1721274588579228.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588579228.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588579228.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588206699.webp">
-                        <img src="/u/upload/other/20240718/1721274588206699.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588206699.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588206699.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588404051.webp">
-                        <img src="/u/upload/other/20240718/1721274588404051.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588404051.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588404051.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588196175.webp">
-                        <img src="/u/upload/other/20240718/1721274588196175.webp" alt="Animal"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588196175.webp">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588196175.webp" alt="Animal"/></a>
                         <b></b>
                     </a>
                 </div> 
@@ -91,7 +91,7 @@
             <p>Next: <a href="javascript:;"> </a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
