--- a/q/8.html
+++ b/q/8.html
@@ -22,85 +22,85 @@
 			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
                 <h1>Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</h1>
                 <time>2024-07-01</time>
-				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers" />Buy Now  $:12.99 </a> <b class="btn btn-sm btn-c">S/N: A8</b></p>
+				 <p><a href="" target="_blank" class="btn btn-b smooth">  S/N: A8 Buy Now  $:12.99</a> </p>
                <p>Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</p>
             </div>
 			 <div class="row">
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820142909310.webp">
-                        <img src="/q/upload/other/20240701/1719820142909310.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719820142909310.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719820142909310.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820142867508.webp">
-                        <img src="/q/upload/other/20240701/1719820142867508.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719820142867508.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719820142867508.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820142192546.webp">
-                        <img src="/q/upload/other/20240701/1719820142192546.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719820142192546.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719820142192546.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820142627969.webp">
-                        <img src="/q/upload/other/20240701/1719820142627969.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719820142627969.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719820142627969.webp" alt="Flower"/></a>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148468509.webp">
-                        <img src="/q/upload/other/20240701/1719820148468509.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719820148468509.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719820148468509.webp" alt="Flower"/></a>
                         <b>S/N: A8-1</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148415017.webp">
-                        <img src="/q/upload/other/20240701/1719820148415017.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719820148415017.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719820148415017.webp" alt="Flower"/></a>
                         <b>S/N: A8-2</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148928790.webp">
-                        <img src="/q/upload/other/20240701/1719820148928790.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719820148928790.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719820148928790.webp" alt="Flower"/></a>
                         <b>S/N: A8-3</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148540864.webp">
-                        <img src="/q/upload/other/20240701/1719820148540864.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719820148540864.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719820148540864.webp" alt="Flower"/></a>
                         <b>S/N: A8-4</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148655115.webp">
-                        <img src="/q/upload/other/20240701/1719820148655115.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719820148655115.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719820148655115.webp" alt="Flower"/></a>
                         <b>S/N: A8-5</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148841630.webp">
-                        <img src="/q/upload/other/20240701/1719820148841630.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719820148841630.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719820148841630.webp" alt="Flower"/></a>
                         <b>S/N: A8-6</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148694865.webp">
-                        <img src="/q/upload/other/20240701/1719820148694865.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719820148694865.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719820148694865.webp" alt="Flower"/></a>
                         <b>S/N: A8-7</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820149583730.webp">
-                        <img src="/q/upload/other/20240701/1719820149583730.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719820149583730.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719820149583730.webp" alt="Flower"/></a>
                         <b>S/N: A8-8</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820149949314.webp">
-                        <img src="/q/upload/other/20240701/1719820149949314.webp" alt="Flower"/></a>
+                    <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719820149949314.webp">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719820149949314.webp" alt="Flower"/></a>
                         <b>S/N: A8-9</b>
                     </a>
                 </div> 
@@ -109,7 +109,7 @@
             <p>Next: <a href="/q/9.html">Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
