--- a/q/animal_4/index.html
+++ b/q/animal_4/index.html
@@ -28,55 +28,55 @@
             <div class="row">
                 <div class="col c4">
                     <a href="/q/37.html" title="Cute little tiger embroidery patch,2024-07-07 14:48:59" class="btn btn-a" >
-                        <img src="/u/upload/other/20240707/1720335273197985.webp" alt="Cute little tiger embroidery patch,2024-07-07 14:48:59">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335273197985.webp" alt="Cute little tiger embroidery patch,2024-07-07 14:48:59">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/35.html" title="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51" class="btn btn-a" >
-                        <img src="/u/upload/other/20240707/1720323888225453.webp" alt="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323888225453.webp" alt="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/34.html" title="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22" class="btn btn-a" >
-                        <img src="/u/upload/other/20240707/1720322934325110.webp" alt="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322934325110.webp" alt="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/33.html" title="Cartoon animal embroidery,2024-07-06 17:29:47" class="btn btn-a" >
-                        <img src="/u/upload/other/20240717/1721228977433260.webp" alt="Cartoon animal embroidery,2024-07-06 17:29:47">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721228977433260.webp" alt="Cartoon animal embroidery,2024-07-06 17:29:47">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/32.html" title="Cartoon flower butterfly embroidered fabric patch,2024-07-06 15:21:51" class="btn btn-a" >
-                        <img src="/q/upload/other/20240706/1720251451442410.webp" alt="Cartoon flower butterfly embroidered fabric patch,2024-07-06 15:21:51">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720251451442410.webp" alt="Cartoon flower butterfly embroidered fabric patch,2024-07-06 15:21:51">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/31.html" title="Cute cartoon cat,2024-07-06 15:15:09" class="btn btn-a" >
-                        <img src="/q/upload/other/20240706/1720250443946766.webp" alt="Cute cartoon cat,2024-07-06 15:15:09">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250443946766.webp" alt="Cute cartoon cat,2024-07-06 15:15:09">
                         <b>$:9.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/30.html" title="Cartoon Panda Cute Embroidered Cloth Sticker,2024-07-06 14:59:58" class="btn btn-a" >
-                        <img src="/q/upload/other/20240706/1720249515387478.webp" alt="Cartoon Panda Cute Embroidered Cloth Sticker,2024-07-06 14:59:58">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249515387478.webp" alt="Cartoon Panda Cute Embroidered Cloth Sticker,2024-07-06 14:59:58">
                         <b>$:9.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/29.html" title="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13" class="btn btn-a" >
-                        <img src="/q/upload/other/20240706/1720248862555502.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248862555502.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/28.html" title="Cartoon Rabbit Astronaut,2024-07-06 09:42:46" class="btn btn-a" >
-                        <img src="/q/upload/other/20240706/1720230542547710.webp" alt="Cartoon Rabbit Astronaut,2024-07-06 09:42:46">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720230542547710.webp" alt="Cartoon Rabbit Astronaut,2024-07-06 09:42:46">
                         <b>$:12.99</b>
                     </a>
                 </div><br />
@@ -84,7 +84,7 @@
             </div>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
