--- a/q/article/index.html
+++ b/q/article/index.html
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col c4">
                     <a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34" >
-                        <img src="/q/logo.webp" alt="Privacy Policy,2024-07-07 15:27:34">
+                        <img src="https://c.zalalaa.com/q/logo.webp" alt="Privacy Policy,2024-07-07 15:27:34">
                         <b>Privacy Policy</b><br />2024-07-07
                     </a>
                 </div>
@@ -33,7 +33,7 @@
 			<p><a href="javascript:;index.html" class="btn btn-b">Previous</a>  <a href="javascript:;index.html" class="btn btn-b">Next</a></p>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
