--- a/q/flower_2/index.html
+++ b/q/flower_2/index.html
@@ -28,55 +28,55 @@
             <div class="row">
                 <div class="col c4">
                     <a href="/q/8.html" title="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719819186655198.webp" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719819186655198.webp" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27">
                         <b>$:12.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23" class="btn btn-a" >
-                        <img src="/q/upload/other/20240630/1719759342917874.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240630/1719759342917874.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23">
                         <b>$:9.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/4.html" title="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719806402155946.webp" alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719806402155946.webp" alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13">
                         <b>$:12.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48" class="btn btn-a" >
-                        <img src="/q/upload/other/20240630/1719759794881169.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240630/1719759794881169.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">
                         <b>$:12.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/14.html" title="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719805636338260.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719805636338260.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719794556332881.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719794556332881.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">
                         <b>$:12.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719794420979065.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719794420979065.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">
                         <b>$:12.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57" class="btn btn-a" >
-                        <img src="/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
                         <b>$:12.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15" class="btn btn-a" >
-                        <img src="/q/upload/other/20240630/1719760090198490.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240630/1719760090198490.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
                         <b>$:13.99</b>
                     </a>
                 </div><br />
@@ -84,7 +84,7 @@
             </div>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
