--- a/q/hot/index.html
+++ b/q/hot/index.html
@@ -28,31 +28,31 @@
             <div class="row">
                 <div class="col c4">
                     <a href="/q/35.html" title="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51" class="btn btn-a" >
-                        <img src="/u/upload/other/20240707/1720323888225453.webp" alt="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323888225453.webp" alt="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/34.html" title="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22" class="btn btn-a" >
-                        <img src="/u/upload/other/20240707/1720322934325110.webp" alt="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322934325110.webp" alt="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/33.html" title="Cartoon animal embroidery,2024-07-06 17:29:47" class="btn btn-a" >
-                        <img src="/u/upload/other/20240717/1721228977433260.webp" alt="Cartoon animal embroidery,2024-07-06 17:29:47">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721228977433260.webp" alt="Cartoon animal embroidery,2024-07-06 17:29:47">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/29.html" title="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13" class="btn btn-a" >
-                        <img src="/q/upload/other/20240706/1720248862555502.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248862555502.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/25.html" title="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53" class="btn btn-a" >
-                        <img src="/q/upload/other/20240705/1720173688785484.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173688785484.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53">
                         <b>$:39.99</b>
                     </a>
                 </div><br />
@@ -60,7 +60,7 @@
             </div>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
