--- a/q/patches_2/index.html
+++ b/q/patches_2/index.html
@@ -28,55 +28,55 @@
             <div class="row">
                 <div class="col c4">
                     <a href="/q/61.html" title="Cartoon animal bear head embroidery cloth sticker,2024-07-16 17:22:22" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721122103920304.webp" alt="Cartoon animal bear head embroidery cloth sticker,2024-07-16 17:22:22">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721122103920304.webp" alt="Cartoon animal bear head embroidery cloth sticker,2024-07-16 17:22:22">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/60.html" title="Multicoloured flowers embroidery patch decoration,2024-07-16 17:11:02" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721121730300987.webp" alt="Multicoloured flowers embroidery patch decoration,2024-07-16 17:11:02">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121730300987.webp" alt="Multicoloured flowers embroidery patch decoration,2024-07-16 17:11:02">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/59.html" title="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker,2024-07-16 16:59:49" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721121005689493.webp" alt="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker,2024-07-16 16:59:49">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121005689493.webp" alt="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker,2024-07-16 16:59:49">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/58.html" title="Cute Five Star Embroidery Cloth Sticker,2024-07-16 16:23:33" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721120358159448.webp" alt="Cute Five Star Embroidery Cloth Sticker,2024-07-16 16:23:33">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721120358159448.webp" alt="Cute Five Star Embroidery Cloth Sticker,2024-07-16 16:23:33">
                         <b>$:59.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/57.html" title="Panda Embroidery Cloth Sticker,2024-07-16 16:15:34" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721118138901605.webp" alt="Panda Embroidery Cloth Sticker,2024-07-16 16:15:34">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721118138901605.webp" alt="Panda Embroidery Cloth Sticker,2024-07-16 16:15:34">
                         <b>$:59.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/56.html" title="Butterfly Embroidery Cloth Sticker,2024-07-16 16:03:53" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721117695495675.webp" alt="Butterfly Embroidery Cloth Sticker,2024-07-16 16:03:53">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721117695495675.webp" alt="Butterfly Embroidery Cloth Sticker,2024-07-16 16:03:53">
                         <b>$:69.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/55.html" title="Fruit and vegetable embroidery,2024-07-16 15:51:27" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721116996941079.webp" alt="Fruit and vegetable embroidery,2024-07-16 15:51:27">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116996941079.webp" alt="Fruit and vegetable embroidery,2024-07-16 15:51:27">
                         <b>$:69.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/54.html" title="Cartoon flower cloth embroidery patch,2024-07-16 15:44:12" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721116021995153.webp" alt="Cartoon flower cloth embroidery patch,2024-07-16 15:44:12">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721116021995153.webp" alt="Cartoon flower cloth embroidery patch,2024-07-16 15:44:12">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/53.html" title="Leaf embroidery cloth sticker can be ironed hand stitch patch,2024-07-16 15:23:44" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721115559502173.webp" alt="Leaf embroidery cloth sticker can be ironed hand stitch patch,2024-07-16 15:23:44">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721115559502173.webp" alt="Leaf embroidery cloth sticker can be ironed hand stitch patch,2024-07-16 15:23:44">
                         <b>$:69.99</b>
                     </a>
                 </div><br />
@@ -84,7 +84,7 @@
             </div>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
