--- a/q/patches_3/index.html
+++ b/q/patches_3/index.html
@@ -28,55 +28,55 @@
             <div class="row">
                 <div class="col c4">
                     <a href="/q/52.html" title="Sailboat series embroidery cloth stickers,2024-07-16 15:17:20" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721114585962016.webp" alt="Sailboat series embroidery cloth stickers,2024-07-16 15:17:20">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114585962016.webp" alt="Sailboat series embroidery cloth stickers,2024-07-16 15:17:20">
                         <b>$:69.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/51.html" title="Flamingo Embroidery Cloth Sticker,2024-07-16 15:13:10" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721114134135334.webp" alt="Flamingo Embroidery Cloth Sticker,2024-07-16 15:13:10">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114134135334.webp" alt="Flamingo Embroidery Cloth Sticker,2024-07-16 15:13:10">
                         <b>$:69.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/50.html" title="Embroidery cloth paste wholesale,2024-07-16 14:39:44" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721112302640195.webp" alt="Embroidery cloth paste wholesale,2024-07-16 14:39:44">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721112302640195.webp" alt="Embroidery cloth paste wholesale,2024-07-16 14:39:44">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/49.html" title="Cartoon shoes embroidered cloth sticker,2024-07-16 11:38:18" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721101271678946.webp" alt="Cartoon shoes embroidered cloth sticker,2024-07-16 11:38:18">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101271678946.webp" alt="Cartoon shoes embroidered cloth sticker,2024-07-16 11:38:18">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/48.html" title="Cartoon Cubs Embroidered Cloth Sticker,2024-07-16 10:53:03" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721100133635422.webp" alt="Cartoon Cubs Embroidered Cloth Sticker,2024-07-16 10:53:03">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100133635422.webp" alt="Cartoon Cubs Embroidered Cloth Sticker,2024-07-16 10:53:03">
                         <b>$:49.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/47.html" title="Cartoon rabbit cat wing cloth,2024-07-16 10:09:29" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721097742315049.webp" alt="Cartoon rabbit cat wing cloth,2024-07-16 10:09:29">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721097742315049.webp" alt="Cartoon rabbit cat wing cloth,2024-07-16 10:09:29">
                         <b>$:49.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/46.html" title="Skeleton Finger Ghost Head Embroidered Cloth Sticker,2024-07-16 09:41:08" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721101882184015.webp" alt="Skeleton Finger Ghost Head Embroidered Cloth Sticker,2024-07-16 09:41:08">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101882184015.webp" alt="Skeleton Finger Ghost Head Embroidered Cloth Sticker,2024-07-16 09:41:08">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/45.html" title="Embroidery Gesture Patch Fashion DIY Dress Patch,2024-07-16 09:15:46" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721093832149983.webp" alt="Embroidery Gesture Patch Fashion DIY Dress Patch,2024-07-16 09:15:46">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721093832149983.webp" alt="Embroidery Gesture Patch Fashion DIY Dress Patch,2024-07-16 09:15:46">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/44.html" title="Fish Embroidery Sticker,2024-07-16 08:59:59" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721092382830527.webp" alt="Fish Embroidery Sticker,2024-07-16 08:59:59">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092382830527.webp" alt="Fish Embroidery Sticker,2024-07-16 08:59:59">
                         <b>$:39.99</b>
                     </a>
                 </div><br />
@@ -84,7 +84,7 @@
             </div>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
