--- a/q/patches_4/index.html
+++ b/q/patches_4/index.html
@@ -28,55 +28,55 @@
             <div class="row">
                 <div class="col c4">
                     <a href="/q/43.html" title="Skeleton embroidered cloth sticker,2024-07-16 07:49:11" class="btn btn-a" >
-                        <img src="/u/upload/other/20240716/1721091299902270.webp" alt="Skeleton embroidered cloth sticker,2024-07-16 07:49:11">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091299902270.webp" alt="Skeleton embroidered cloth sticker,2024-07-16 07:49:11">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/42.html" title="Bee Butterfly Ironing Sticker,2024-07-15 17:18:54" class="btn btn-a" >
-                        <img src="/u/upload/other/20240715/1721035723888537.webp" alt="Bee Butterfly Ironing Sticker,2024-07-15 17:18:54">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035723888537.webp" alt="Bee Butterfly Ironing Sticker,2024-07-15 17:18:54">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/41.html" title="Embroidery Little Flowers,2024-07-15 15:47:49" class="btn btn-a" >
-                        <img src="/u/upload/other/20240715/1721031033744472.webp" alt="Embroidery Little Flowers,2024-07-15 15:47:49">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031033744472.webp" alt="Embroidery Little Flowers,2024-07-15 15:47:49">
                         <b>$:39.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/40.html" title="Hundreds of birds face fengbu cloth embroidery cloth,2024-07-15 15:10:03" class="btn btn-a" >
-                        <img src="/u/upload/other/20240715/1721029314783487.webp" alt="Hundreds of birds face fengbu cloth embroidery cloth,2024-07-15 15:10:03">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029314783487.webp" alt="Hundreds of birds face fengbu cloth embroidery cloth,2024-07-15 15:10:03">
                         <b>$:69.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/39.html" title="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24" class="btn btn-a" >
-                        <img src="/u/upload/other/20240708/1720399319143229.webp" alt="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399319143229.webp" alt="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24">
                         <b>$:9.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/37.html" title="Cute little tiger embroidery patch,2024-07-07 14:48:59" class="btn btn-a" >
-                        <img src="/u/upload/other/20240707/1720335273197985.webp" alt="Cute little tiger embroidery patch,2024-07-07 14:48:59">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335273197985.webp" alt="Cute little tiger embroidery patch,2024-07-07 14:48:59">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/36.html" title="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25" class="btn btn-a" >
-                        <img src="/u/upload/other/20240707/1720334898412630.webp" alt="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720334898412630.webp" alt="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25">
                         <b>$:9.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/35.html" title="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51" class="btn btn-a" >
-                        <img src="/u/upload/other/20240707/1720323888225453.webp" alt="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323888225453.webp" alt="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/34.html" title="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22" class="btn btn-a" >
-                        <img src="/u/upload/other/20240707/1720322934325110.webp" alt="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22">
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322934325110.webp" alt="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22">
                         <b>$:29.99</b>
                     </a>
                 </div><br />
@@ -84,7 +84,7 @@
             </div>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
