--- a/q/patches_7/index.html
+++ b/q/patches_7/index.html
@@ -28,49 +28,49 @@
             <div class="row">
                 <div class="col c4">
                     <a href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719794420979065.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719794420979065.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">
                         <b>$:12.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57" class="btn btn-a" >
-                        <img src="/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
                         <b>$:12.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719800457809732.webp" alt="Skull cloth patch,2024-06-10 21:33:26">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719800457809732.webp" alt="Skull cloth patch,2024-06-10 21:33:26">
                         <b>$:12</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15" class="btn btn-a" >
-                        <img src="/q/upload/other/20240630/1719760090198490.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240630/1719760090198490.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
                         <b>$:13.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719800847146446.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719800847146446.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">
                         <b>$:9.99</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719800738209747.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719800738209747.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">
                         <b>$:12</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719800607934008.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719800607934008.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
                         <b>$:12</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a href="/q/17.html" title="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09" class="btn btn-a" >
-                        <img src="/q/upload/other/20240701/1719800181983602.webp" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09">
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719800181983602.webp" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09">
                         <b>$:12.99</b>
                     </a>
                 </div><br />
@@ -78,7 +78,7 @@
             </div>
 		</div>
             <div class="row">
-               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
 			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
